--- a/src/notes/vuecourse/08.md
+++ b/src/notes/vuecourse/08.md
@@ -1,18 +1,54 @@
 :::snippet 监听事件
+v-on 指令监听 DOM 事件，并在触发时运行一些 JavaScript 代码。
 
 ```javascript
-let app01 = new Vue({
-    el: "#app01",
-    data: {
-        count:0
-     },
-})
+var example1 = new Vue({
+  el: "#example-1",
+  data: {
+    counter: 0
+  }
+});
 ```
 
 ```html
-<div id="app01">
-    <button v-on:click="count=count+1"> Add 1</button>
-     <p>The button above has been clicked {{ counter }} times.</p>
+<div id="example-1">
+  <button v-on:click="counter += 1">Add 1</button>
+  <p>The button above has been clicked {{ counter }} times.</p>
+</div>
+```
+
+:::
+
+:::snippet 事件处理方法
+v-on 还可以接收一个需要调用的方法名称。
+
+```javascript
+var example2 = new Vue({
+  el: "#example-2",
+  data: {
+    name: "Vue.js"
+  },
+  // 在 `methods` 对象中定义方法
+  methods: {
+    greet: function(event) {
+      // `this` 在方法里指向当前 Vue 实例
+      alert("Hello " + this.name + "!");
+      // `event` 是原生 DOM 事件
+      if (event) {
+        alert(event.target.tagName);
+      }
+    }
+  }
+});
+
+// 也可以用 JavaScript 直接调用方法
+example2.greet(); // => 'Hello Vue.js!'
+```
+
+```html
+<div id="example-2">
+  <!-- `greet` 是在下面定义的方法名 -->
+  <button v-on:click="greet">Greet</button>
 </div>
 ```
 
@@ -21,63 +57,48 @@ let app01 = new Vue({
 :::snippet 事件处理方法
 
 ```javascript
-let app02 = new Vue({
-    el: "#app02",
-    data: {
-        name: 'Vue.js'
-    },
-    methods: {
-        Addfun: function (event) {
-            // `this` 在方法里指向当前 Vue 实例
-            alert('Hello ' + this.name + '!')
-            // `event` 是原生 DOM 事件
-            if (event) {
-                alert(event.target.tagName)
-            }
-        }
+let example3 = new Vue({
+  el: "#example-3",
+  methods: {
+    say: function(message) {
+      alert(message);
     }
-})
-
+  }
+});
 ```
 
 ```html
-<div id="app02">
-     <button v-on:click="Addfun">Addfun</button>
+<div id="example-3">
+  <button v-on:click="say('hi')">Say hi</button>
+  <button v-on:click="say('what')">Say what</button>
 </div>
 ```
 
 :::
 
-:::snippet 事件处理方法
+:::snippet 事件处理方法$event
+需要在内联语句处理器中访问原始的 DOM 事件。可以用特殊变量 $event 把它传入方法
 
 ```javascript
-let app03 = new Vue({
-    el: "#app03",
-    data: {
-        name: 'Vue.js'
-    },
-    methods: {
-        say: function (message) {
-            // `this` 在方法里指向当前 Vue 实例
-            alert('Hello ' + this.name + '! ' + message + '!')
-            // `event` 是原生 DOM 事件
-        },
-        warn: function (message, event) {
-            // 现在我们可以访问原生事件对象
-            if (event)
-                event.preventDefault()
-            alert(message)
-        }
+let example4 = new Vue({
+  el: "#example-4",
+  methods: {
+    warn: function(message, event) {
+      // 现在我们可以访问原生事件对象
+      if (event) {
+        event.preventDefault();
+      }
+      alert(message);
     }
-})
+  }
+});
 ```
 
 ```html
-<div id="app03">
-    <button v-on:click="say('Say hi')">Say hi</button>
-    <button v-on:click="warn('Form cannot be submitted yet.', $event)">
-        Submit
-    </button>
+<div id="example-4">
+  <button v-on:click="warn('Form cannot be submitted yet.', $event)">
+    Submit
+  </button>
 </div>
 ```
 
@@ -120,7 +141,6 @@ let app03 = new Vue({
 <!-- 而不会等待 `onScroll` 完成  -->
 <!-- 这其中包含 `event.preventDefault()` 的情况 -->
 <div v-on:scroll.passive="onScroll">...</div>
-
 ```
 
 :::
@@ -141,16 +161,16 @@ let app03 = new Vue({
 ```javascript
 //  config.keyCodes 对象自定义按键修饰符别名：
 // 可以使用 `v-on:keyup.f1`
-Vue.config.keyCodes.f1 = 112
+Vue.config.keyCodes.f1 = 112;
 ```
 
 ```html
 <!-- 只有在 `keyCode` 是 13 时调用 `vm.submit()` -->
-<input v-on:keyup.13="submit">
+<input v-on:keyup.13="submit" />
 <!-- 同上 -->
-<input v-on:keyup.enter="submit">
+<input v-on:keyup.enter="submit" />
 
-<input @keyup.page-down="onPageDown">
+<input @keyup.page-down="onPageDown" />
 ```
 
 :::
@@ -172,12 +192,12 @@ Vue.config.keyCodes.f1 = 112
 ```javascript
 //  config.keyCodes 对象自定义按键修饰符别名：
 // 可以使用 `v-on:keyup.f1`
-Vue.config.keyCodes.f1 = 112
+Vue.config.keyCodes.f1 = 112;
 ```
 
 ```html
 <!-- Alt + C -->
-<input @keyup.alt.67="clear">
+<input @keyup.alt.67="clear" />
 
 <!-- Ctrl + Click -->
 <div @click.ctrl="doSomething">Do something</div>
@@ -194,8 +214,8 @@ Vue.config.keyCodes.f1 = 112
 
 :::
 
-:::snippet 为什么在 HTML 中监听事件?
-
+:::snippet HTML 中监听事件?
+Vue.js 事件处理方法和表达式都严格绑定在当前视图的 ViewModel 上，它不会导致任何维护上的困难。
 1. 扫一眼 HTML 模板便能轻松定位在 JavaScript 代码里对应的方法。
 2. 因为你无须在 JavaScript 里手动绑定事件，你的 ViewModel 代码可以是非常纯粹的逻辑，和 DOM 完全解耦，更易于测试。
 3. 当一个 ViewModel 被销毁时，所有的事件处理器都会自动被删除。你无须担心如何清理它们。
