--- a/src/notes/vuecourse/07.md
+++ b/src/notes/vuecourse/07.md
@@ -111,10 +111,10 @@ let app = new Vue({
 
 > 变异方法 (mutation method)，顾名思义，会改变被这些方法调用的原始数组。
 
-1. push() 方法用于在数组的末端添加一个或多个元素，并返回添加新元素后的数组长度 app03.items.push({id:5,name:'小西',age:16,phone:'6666'})
+1. push() 方法用于在数组的末端添加一个或多个元素，并返回添加新元素后的数组长度
 2. pop() 方法用于删除数组的最后一个元素
 3. shift() 方法用于删除数组的第一个元素，并返回该元素。
-4. unshift() 方法用于在数组的第一个位置添加元素，并返回添加新元素后的数组长度。app03.items.unshift({id:5,name:'小西',age:16,phone:'6666'})
+4. unshift() 方法用于在数组的第一个位置添加元素，并返回添加新元素后的数组长度。
 5. splice() 方法用于删除原数组的一部分成员，并可以在删除的位置添加新的数组成员，返回值是被删除的元素。注意，该方法会改变原数组。
 6. sort() 方法对数组成员进行排序，默认是按照字典顺序排序。排序后，原数组将被改变。
 7. reverse() 方法用于颠倒排列数组元素，返回改变后的数组。
@@ -133,8 +133,8 @@ arr.shift(); // 1
 arr; // [ 'a', true]
 arr.unshift("x"); // 3
 arr; // ['x', 'a', true]
-// 1:删除的功能 splice(index,count) 
-// index:开始位置的索引 count:要删除元素的个数 
+// 1:删除的功能 splice(index,count)
+// index:开始位置的索引 count:要删除元素的个数
 // 返回的是包含被删除元素的数组对象
 arr = ["a", "b", "c", "d"];
 var newArr = arr.splice(1, 2); //会把b,c两个元素给删除掉
@@ -147,7 +147,7 @@ arr = ["a", "b", "c", "d"];
 newArr1 = arr.splice(2, 0, "张三");
 console.log(arr); //输出=['a','b','张三','c','d']
 console.log(newArr1); //[]
-// 3:替换功能 splice(index,num,value) 
+// 3:替换功能 splice(index,num,value)
 // index:开始的索引位置 num:删除项的数(如果num为0，就是插入功能) value:插入的值
 // 返回:返回的是包含被删除的元素的数组对象
 arr = ["a", "b", "c", "d"];
@@ -163,7 +163,6 @@ arr.reverse(); // [4, 3, 2, 1]
 :::
 
 :::snippet 非变异方法
-
 非变异 (non-mutating method) 方法 它们不会改变原始数组，而总是返回一个新数组。
 
 1. filter() 创建一个新的数组，新数组中的元素是通过检查指定数组中符合条件的所有元素。
@@ -279,7 +278,7 @@ let app5 = new Vue({
 });
 app5.student.age = 18; // 不是响应性的
 Vue.set(app5.student, "age", 27); //响应性的
-app07.$set(app5.student, "age", 27); //响应性的
+app5.$set(app5.student, "age", 27); //响应性的
 
 Object.assign(app5.student, {
   age: 27,
