--- a/src/notes/vuecourse/04.md
+++ b/src/notes/vuecourse/04.md
@@ -13,7 +13,7 @@ let vm = new Vue({
   computed: {
     // 计算属性的 getter
     reversedMessage: function() {
-      // `this` 指向 vm 实例
+      //`this`指向 vm 实例
       return this.message
         .split("")
         .reverse()
@@ -35,7 +35,7 @@ console.log(vm.reversedMessage); // => 'eybdooG'
 
 :::
 
-:::snippet 计算属性缓存 vs 方法
+:::snippet 计算属性缓存`vs`方法
 
 1. 计算属性只在相关依赖发生改变时它们才会重新求值。
 2. 方法 当触发重新渲染时，调用方法将总会再次执行函数。
@@ -92,7 +92,7 @@ console.log(app.reversedFun()); //egassem indexMethod3
 
 :::
 
-:::snippet 计算属性 vs 侦听属性
+:::snippet 计算属性`vs`侦听属性
 更通用的方式来观察和响应 Vue 实例上的数据变动：侦听属性。
 
 ```javascript
@@ -145,7 +145,7 @@ console.log(app2.lastName); // huang
 
 :::
 
-:::snippet 计算属性的 setter 和 getter
+:::snippet 计算属性的`setter`和`getter`
 
 ```javascript
 let indexGet = 0;
@@ -207,7 +207,7 @@ app3.fullName = "huang xiqian";
 :::
 
 :::snippet 侦听器
-在这个示例中，使用 watch 选项允许我们执行异步操作 (访问一个 API)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。
+在这个示例中，使用`watch`选项允许我们执行异步操作 (访问一个`API`)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。
 
 ```javascript
 let watchExampleVM = new Vue({
@@ -217,17 +217,17 @@ let watchExampleVM = new Vue({
     answer: "I cannot give you an answer until you ask a question!"
   },
   watch: {
-    // 如果 `question` 发生改变，这个函数就会运行
+    // 如果`question`发生改变，这个函数就会运行
     question: function(newQuestion, oldQuestion) {
       this.answer = "Waiting for you to stop typing...";
       this.debouncedGetAnswer();
     }
   },
   created: function() {
-    // `_.debounce` 是一个通过 Lodash 限制操作频率的函数。
+    //`_.debounce`是一个通过 Lodash 限制操作频率的函数。
     // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
     // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
-    // `_.debounce` 函数 (及其近亲 `_.throttle`) 的知识，
+    //`_.debounce`函数 (及其近亲`_.throttle`) 的知识，
     // 请参考：https://lodash.com/docs#debounce
     this.debouncedGetAnswer = _.debounce(this.getAnswer, 500);
   },
