--- a/src/notes/vuecourse/06.md
+++ b/src/notes/vuecourse/06.md
@@ -1,8 +1,8 @@
 :::snippet `v-if`
 
-1. v-if 指令用于条件性地渲染一块内容。这块内容只会在指令的表达式返回 truthy 值的时候被渲染。
-2. 也可以用 `v-else` 添加一个`else 块`
-3. `v-else` 元素必须紧跟在带 `v-if` 或者 `v-else-if` 的元素的后面，否则它将不会被识别。
+1. `v-if`指令用于条件性地渲染一块内容。这块内容只会在指令的表达式返回`truthy`值的时候被渲染。
+2. 也可以用`v-else`添加一个`else 块`
+3. `v-else`元素必须紧跟在带`v-if`或者`v-else-if`的元素的后面，否则它将不会被识别。
 
 ```javascript
 let app = new Vue({
@@ -23,7 +23,7 @@ app.ok = false;
 
 :::
 
-:::snippet `<template>` 元素上使用 v-if 条件渲染分组
+:::snippet`<template>`元素上使用`v-if`条件渲染分组
 
 ```javascript
 let app2 = new Vue({
@@ -51,7 +51,7 @@ let app2 = new Vue({
 :::
 
 :::snippet `v-else-if`
-`v-else-if`，顾名思义，充当 `v-if` 的`else-if 块`，可以连续使用：
+`v-else-if`，顾名思义，充当`v-if`的`else-if 块`，可以连续使用：
 
 ```javascript
 let app3 = new Vue({
@@ -80,7 +80,7 @@ let app3 = new Vue({
 
 :::snippet 用`key`管理可复用的元素
 
-1. 添加一个具有唯一值的 key 属性
+1. 添加一个具有唯一值的`key`属性
 2. 输入框都将被重新渲染。
 3. `<label>`元素仍然会被高效地复用，因为它们没有添加 key 属性。
 
@@ -117,9 +117,9 @@ let app4 = new Vue({
 
 :::snippet `v-show`
 
-带有 v-show 的元素始终会被渲染并保留在 DOM 中。v-show 只是简单地切换元素的 CSS 属性 display。
+带有`v-show`的元素始终会被渲染并保留在`DOM`中。`v-show`只是简单地切换元素的`CSS`属性`display`。
 
-> 注意，v-show 不支持`<template>`元素，也不支持 v-else。
+> 注意，`v-show`不支持`<template>`元素，也不支持`v-else`。
 
 ```javascript
 let app5 = new Vue({
@@ -143,17 +143,19 @@ let app5 = new Vue({
 
 :::snippet `v-if` vs `v-show`
 
-1. v-if 是`真正`的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当地被销毁和重建。
-2. v-if 也是惰性的：如果在初始渲染时条件为假，则什么也不做。——直到条件第一次变为真时，才会开始渲染条件块。
-3. v-show 就简单得多——不管初始条件是什么，元素总是会被渲染，并且只是简单地基于 CSS 进行切换。
-4. v-if 有更高的切换开销，而 v-show 有更高的初始渲染开销。
-5. 如果需要非常频繁地切换，则使用 v-show 较好；如果在运行时条件很少改变，则使用 v-if 较好。
-   > v-if 有更高的切换开销，而 v-show 有更高的初始渲染开销。因此，如果需要非常频繁地切换，则使用 v-show 较好；如果在运行时条件很少改变，则使用 v-if 较好。
-   > :::
+1. `v-if`是`真正`的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当地被销毁和重建。
+2. `v-if`也是惰性的：如果在初始渲染时条件为假，则什么也不做。——直到条件第一次变为真时，才会开始渲染条件块。
+3. `v-show`就简单得多——不管初始条件是什么，元素总是会被渲染，并且只是简单地基于`CSS`进行切换。
+4. `v-if`有更高的切换开销，而`v-show`有更高的初始渲染开销。
+5. 如果需要非常频繁地切换，则使用`v-show`较好；如果在运行时条件很少改变，则使用`v-if`较好。
+
+> `v-if`有更高的切换开销，而`v-show`有更高的初始渲染开销。因此，如果需要非常频繁地切换，则使用`v-show`较好；如果在运行时条件很少改变，则使用`v-if`较好。
+
+:::
 
 :::snippet `v-if`与`v-for`一起使用
 
-1. 不推荐同时使用 v-if 和 v-for。请查阅风格指南以获取更多信息。
-2. 当 v-if 与 v-for 一起使用时，v-for 具有比 v-if 更高的优先级。
+1. 不推荐同时使用`v-if`和`v-for`。请查阅风格指南以获取更多信息。
+2. 当`v-if`与`v-for`一起使用时，`v-for`具有比`v-if`更高的优先级。
 
 :::
