--- a/src/notes/vuecourse/07.md
+++ b/src/notes/vuecourse/07.md
@@ -1,9 +1,9 @@
-:::snippet 'v-for' 把一个数组对应为一组元素
+:::snippet v-for 把一个数组对应为一组元素
 
-1. 我们可以用 v-for 指令基于一个数组来渲染一个列表。
-2. v-for 指令需要使用 item in items 形式的特殊语法，其中 items 是源数据数组，而 item 则是被迭代的数组元素的别名。
+1. 我们可以用 `v-for` 指令基于一个数组来渲染一个列表。
+2. `v-for` 指令需要使用 `item in items` 形式的特殊语法，其中 `items` 是源数据数组，而 `item` 则是被迭代的数组元素的别名。
 3. `of` 替代 `in` 作为分隔符，因为它是最接近 `JavaScript` 迭代器的语法
-4. v-for 还支持一个可选的第二个参数，即当前项的索引。
+4. `v-for` 还支持一个可选的第二个参数，即当前项的索引。
 
 ```javascript
 var example1 = new Vue({
@@ -31,12 +31,12 @@ var example1 = new Vue({
 
 :::
 
-:::snippet 'v-for' 把一个对象对应为一组元素
+:::snippet `v-for`把一个对象对应为一组元素
 
 1. 提供第一个的参数为键值。
 2. 提供第二个的参数为键名。
 3. 提供第三个参数为索引。
-4. 在遍历对象时，是按 Object.keys() 的结果遍历，但是不能保证它的结果在不同的 JavaScript 引擎下是一致的。
+4. 在遍历对象时，是按`Object.keys()`的结果遍历，但是不能保证它的结果在不同的`JavaScript`引擎下是一致的。
 
 ```javascript
 let vForObject = new Vue({
@@ -74,9 +74,9 @@ let vForObject = new Vue({
 
 :::snippet `key`
 
-> 不提供`key` 只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
-> 尽可能在使用`v-for`时提供 `key`，除非遍历输出的 `DOM` 内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
-> `key`它是 `Vue` 识别节点的一个通用机制
+> 不提供`key`只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
+> 尽可能在使用`v-for`时提供 `key`，除非遍历输出的`DOM`内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
+> `key`它是`Vue`识别节点的一个通用机制
 
 ```javascript
 let app = new Vue({
@@ -107,17 +107,17 @@ let app = new Vue({
 
 :::
 
-:::snippet 数组变异方法 (mutation method)
+:::snippet 数组变异方法 (`mutation method`)
 
-> 变异方法 (mutation method)，顾名思义，会改变被这些方法调用的原始数组。
+> 变异方法 (`mutation method`)，顾名思义，会改变被这些方法调用的原始数组。
 
-1. push() 方法用于在数组的末端添加一个或多个元素，并返回添加新元素后的数组长度
-2. pop() 方法用于删除数组的最后一个元素
-3. shift() 方法用于删除数组的第一个元素，并返回该元素。
-4. unshift() 方法用于在数组的第一个位置添加元素，并返回添加新元素后的数组长度。
-5. splice() 方法用于删除原数组的一部分成员，并可以在删除的位置添加新的数组成员，返回值是被删除的元素。注意，该方法会改变原数组。
-6. sort() 方法对数组成员进行排序，默认是按照字典顺序排序。排序后，原数组将被改变。
-7. reverse() 方法用于颠倒排列数组元素，返回改变后的数组。
+1. `push()`方法用于在数组的末端添加一个或多个元素，并返回添加新元素后的数组长度
+2. `pop()`方法用于删除数组的最后一个元素
+3. `shift()`方法用于删除数组的第一个元素，并返回该元素。
+4. `unshift()`方法用于在数组的第一个位置添加元素，并返回添加新元素后的数组长度。
+5. `splice()`方法用于删除原数组的一部分成员，并可以在删除的位置添加新的数组成员，返回值是被删除的元素。注意，该方法会改变原数组。
+6. `sort()`方法对数组成员进行排序，默认是按照字典顺序排序。排序后，原数组将被改变。
+7. `reverse()`方法用于颠倒排列数组元素，返回改变后的数组。
 
 ```javascript
 var arr = [];
@@ -163,11 +163,11 @@ arr.reverse(); // [4, 3, 2, 1]
 :::
 
 :::snippet 非变异方法
-非变异 (non-mutating method) 方法 它们不会改变原始数组，而总是返回一个新数组。
+非变异 (`non-mutating method`) 方法 它们不会改变原始数组，而总是返回一个新数组。
 
-1. filter() 创建一个新的数组，新数组中的元素是通过检查指定数组中符合条件的所有元素。
-2. concat() 连接两个或更多的数组，并返回结果。
-3. slice() 它能够基于当前数组中的一个或多个项创建一个新数组。
+1. `filter()`创建一个新的数组，新数组中的元素是通过检查指定数组中符合条件的所有元素。
+2. `concat()`连接两个或更多的数组，并返回结果。
+3. `slice()`它能够基于当前数组中的一个或多个项创建一个新数组。
 
 ```javascript
 var arr = [1, 2, 3, 4];
@@ -188,10 +188,10 @@ var colors3 = colors.slice(1, 4); //  green,blue,yellow
 :::
 :::snippet 数组注意事项
 
-> 由于 JavaScript 的限制，Vue 不能检测以下变动的数组
+> 由于`JavaScript`的限制，`Vue`不能检测以下变动的数组
 
-1. 当你利用索引直接设置一个项时，例如：vm.items[indexOfItem] = newValue
-2. 当你修改数组的长度时，例如：vm.items.length = newLength
+1. 当你利用索引直接设置一个项时，例如：`vm.items[indexOfItem] = newValue`
+2. 当你修改数组的长度时，例如：`vm.items.length = newLength`
 
 ```javascript
 let app2 = new Vue({
@@ -254,8 +254,8 @@ let app3 = new Vue({
 
 :::snippet 对象更改检测注意事项
 
-> JavaScript 的限制，Vue 不能检测对象属性的添加或删除
-> Vue 不能动态添加根级别的响应式属性.
+> `JavaScript`的限制，`Vue`不能检测对象属性的添加或删除
+> `Vue`不能动态添加根级别的响应式属性.
 > 嵌套对象添加响应式属性
 
 ```javascript
@@ -440,7 +440,7 @@ let app9 = new Vue({
 
 :::snippet 组件的`v-for`
 
-> 当在组件上使用 v-for 时，key 现在是必须的。
+> 当在组件上使用`v-for`时，`key`现在是必须的。
 
 ```javascript
 Vue.component("todo-item", {
