--- a/src/notes/vuecourse/02.md
+++ b/src/notes/vuecourse/02.md
@@ -1,4 +1,4 @@
-:::snippet 创建一个 Vue 实例
+:::snippet 创建一个`Vue`实例
 
 ```javascript
 let vm = new Vue({
@@ -92,37 +92,29 @@ new Vue({
 ![初始化](../../assets/images/vuecourse-02-01.png)
 
 1. `beforeCreate`（新对象诞生）
+   `Vue`对象用新方法实例化。它创建一个`Vue`类的对象来处理`DOM`元素。对象的这个生命阶段可以通过`beforeCreated`挂钩来访问 。我们可以在这个钩子中插入我们的代码，在对象初始化之前执行。
 
-Vue对象用新方法实例化。它创建一个Vue类的对象来处理DOM元素。对象的这个生命阶段可以通过beforeCreated 挂钩来访问 。我们可以在这个钩子中插入我们的代码，在对象初始化之前执行。
+2. `created`创建（具有默认特性的对象）
+   在这个生命阶段，对象及其事件完全初始化。`created`是访问这个阶段并编写代码的钩子。
 
-2. `created` 创建（具有默认特性的对象）
+3. `beforeMounted`（对象在`DOM`中适合形状）
+   这个钩子被调用`beforeMounted`。在这个阶段，它检查是否有任何模板可用于要在`DOM`中呈现的对象。如果没有找到模板，那么它将所定义元素的外部`HTML`视为模板。
 
-在这个生命阶段，对象及其事件完全初始化。 created 是访问这个阶段并编写代码的钩子。
+4. `mounted`已安装（`DOM`已准备就绪并放置在页面内）
+   一旦模板准备就绪。它将数据放入模板并创建可呈现元素。用这个新的数据填充元素替换`DOM`元素。这一切都发生在`mounted`钩子上。
 
-3. `beforeMounted`（对象在DOM中适合形状）
+5. `beforeUpdate`（更改已完成，但尚未准备好更新`DOM`）
+   在外部事件/用户输入`beforeUpdate`发生更改时，此钩子即在反映原始`DOM`元素的更改之前被触发。
 
-这个钩子被调用 beforeMounted。在这个阶段，它检查是否有任何模板可用于要在DOM中呈现的对象。如果没有找到模板，那么它将所定义元素的外部HTML视为模板。
-
-4. `mounted` 已安装（DOM已准备就绪并放置在页面内）
-
-一旦模板准备就绪。它将数据放入模板并创建可呈现元素。用这个新的数据填充元素替换DOM元素。这一切都发生在mounted钩子上。
-
-5. `beforeUpdate`（更改已完成，但尚未准备好更新DOM）
-
-在外部事件/用户输入beforeUpdate发生更改时，此钩子即 在反映原始DOM元素的更改之前被触发。
-
-6. `updated` 更新（在DOM中呈现的更改）
-
-然后，通过实际更新DOM对象并触发updated，屏幕上的变化得到呈现 。
+6. `updated` 更新（在`DOM`中呈现的更改）
+   然后，通过实际更新`DOM`对象并触发`updated`，屏幕上的变化得到呈现 。
 
 7. `beforeDestroy`（对象准备死掉）
+   就在 Vue 对象被破坏并从内存中释放之前，`deforeDestroy`钩子被触发，并允许我们在其中处理我们的自定义代码。
 
-就在Vue对象被破坏并从内存中释放之前， deforeDestroy 钩子被触发，并允许我们在其中处理我们的自定义代码。
+8. `destroyed`销毁（对象停止并从内存中删除）
+   该`destroyed`钩子被成功运行销毁对象上调用。
 
-8. `destroyed` 销毁（对象停止并从内存中删除）
-
-该 destroyed 钩子被成功运行销毁对象上调用。
-
-> 不要在选项属性或回调上使用箭头函数，比如 created: () => console.log(this.a) 或 vm.\$watch('a', newValue => this.myMethod())。因为箭头函数是和父级上下文绑定在一起的，this 不会是如你所预期的 Vue 实例，经常导致 Uncaught TypeError: Cannot read property of undefined 或 Uncaught TypeError: this.myMethod is not a function 之类的错误。
+> 不要在选项属性或回调上使用箭头函数，比如`created: () => console.log(this.a)`或`vm.\$watch('a', newValue => this.myMethod())`。因为箭头函数是和父级上下文绑定在一起的，`this`不会是如你所预期的`Vue`实例，经常导致`Uncaught TypeError: Cannot read property of undefined`或`Uncaught TypeError: this.myMethod is not a function`之类的错误。
 
 :::
