--- a/src/notes/vuecourse/03.md
+++ b/src/notes/vuecourse/03.md
@@ -1,12 +1,10 @@
 :::snippet 模板语法
 
-1. vue.js 使用了基于 HTML 的模板语法，允许开发者声明式地将 DOM 绑定至底层 Vue 实例的数据。所有 Vue.js 的模板都是合法的 HTML ，所以能被遵循规范的浏览器和 HTML 解析器解析。
-2. 在底层的实现上，Vue 将模板编译成虚拟 DOM 渲染函数。结合响应系统，Vue 能够智能地计算出最少需要重新渲染多少组件，并把 DOM 操作次数减到最少。
-
-:::
+1. `vue.js`使用了基于`HTML`的模板语法，允许开发者声明式地将`DOM`绑定至底层`Vue`实例的数据。所有`Vue.js`的模板都是合法的`HTML`，所以能被遵循规范的浏览器和`HTML`解析器解析。
+2. 在底层的实现上，Vue 将模板编译成虚拟`DOM`渲染函数。结合响应系统`Vue`能够智能地计算出最少需要重新渲染多少组件，并把`DOM`操作次数减到最少。
+   :::
 
 :::snippet 文本
-
 数据绑定最常见的形式就是使用`Mustache`语法 (双大括号) 的文本插值
 
 ```javascript
@@ -28,13 +26,12 @@ app.age = 20; // 年龄改成 20
 </div>
 ```
 
-1. 绑定的数据对象上 age 属性发生了改变，插值处的内容都会更新。
-2. 通过使用 v-once 指令，你也能执行一次性地插值，当数据改变时，插值处的内容不会更新。
+1. 绑定的数据对象上`age`属性发生了改变，插值处的内容都会更新。
+2. 通过使用`v-once`指令，你也能执行一次性地插值，当数据改变时，插值处的内容不会更新。
    :::
 
-:::snippet 原始 HTML
-
-双大括号会将数据解释为普通文本，而非 HTML 代码。为了输出真正的 HTML，你需要使用 v-html 指令
+:::snippet 原始`HTML`
+双大括号会将数据解释为普通文本，而非`HTML`代码。为了输出真正的`HTML`，你需要使用`v-html`指令
 
 ```javascript
 let rawHtml = {
@@ -75,8 +72,8 @@ let app3 = new Vue({
 </div>
 ```
 
-1. Mustache 语法不能作用在 HTML 特性上，遇到这种情况应该使用 v-bind 指令
-2. isButtonDisabled 的值是 null、undefined 或 false，则 disabled 特性甚至不会被包含在渲染出来的 `<button>` 元素中
+1. `Mustache`语法不能作用在`HTML`特性上，遇到这种情况应该使用`v-bind`指令
+2. `isButtonDisabled`的值是`null`、`undefined`或`false`，则`disabled`特性甚至不会被包含在渲染出来的`<button>`元素中
    :::
 
 :::snippet 使用 JavaScript 表达式
@@ -114,9 +111,9 @@ let app4 = new Vue({
 
 :::snippet 指令
 
-1. 指令 (Directives) 是带有 v- 前缀的特殊特性。指令特性的值预期是单个 JavaScript 表达式 (v-for 是例外情况)。
-2. 指令的职责是，当表达式的值改变时，将其产生的连带影响，响应式地作用于 DOM。
-3. 参数 一些指令能够接收一个“参数”，在指令名称之后以冒号表示。例如，v-bind 指令可以用于响应式地更新 HTML 特性
+1. 指令`Directives`是带有`v-`前缀的特殊特性。指令特性的值预期是单个`JavaScript`表达式 (`v-for`是例外情况)。
+2. 指令的职责是，当表达式的值改变时，将其产生的连带影响，响应式地作用于`DOM`。
+3. 参数 一些指令能够接收一个“参数”，在指令名称之后以冒号表示。例如，`v-bind`指令可以用于响应式地更新`HTML`特性
 
 ```javascript
 let app5 = new Vue({
@@ -147,12 +144,11 @@ let app5 = new Vue({
 
 :::snippet 动态参数
 
-1. 用方括号括起来的 JavaScript 表达式作为一个指令的参数
-2. attributeName ，其值为 `href`，那么这个绑定将等价于 v-bind:href
-3. 当 eventName 的值为 `focus`时，v-on:[eventName] 将等价于 v-on:focus
-4. 对动态参数的值的约束 动态参数预期会求出一个字符串，异常情况下值为 null。这个特殊的 null 值可以被显性地用于移除绑定。任何其它非字符串类型的值都将会触发一个警告。
-5. 对动态参数表达式的约束 动态参数表达式有一些语法约束，因为某些字符，如空格和引号，放在 HTML attribute 名里是无效的
-   DOM 中使用模板时 (直接在一个 HTML 文件里撰写模板)，还需要避免使用大写字符来命名键名，因为浏览器会把 attribute 名全部强制转为小写
+1. 用方括号括起来的`JavaScript`表达式作为一个指令的参数
+2. `attributeName`，其值为`href`，那么这个绑定将等价于`v-bind:href`
+3. 当`eventName`的值为`focus`时，`v-on:[eventName]`将等价于`v-on:focus`
+4. 对动态参数的值的约束 动态参数预期会求出一个字符串，异常情况下值为`null`。这个特殊的`null`值可以被显性地用于移除绑定。任何其它非字符串类型的值都将会触发一个警告。
+5. 对动态参数表达式的约束 动态参数表达式有一些语法约束，因为某些字符，如空格和引号，放在`HTML attribute`名里是无效的`DOM`中使用模板时 (直接在一个`HTML`文件里撰写模板)，还需要避免使用大写字符来命名键名，因为浏览器会把`attribute`名全部强制转为小写
 
 ```javascript
 let app6 = new Vue({
@@ -181,7 +177,7 @@ let app6 = new Vue({
   <!-- 这会触发一个编译警告 -->
 <a v-bind:['foo' + bar]="value"... </a>
 <!--
-在 DOM 中使用模板时这段代码会被转换为 `v-bind:[someattr]`。
+在 DOM 中使用模板时这段代码会被转换为`v-bind:[someattr]`。
 除非在实例中有一个名为“someattr”的 property，否则代码不会工作。
 -->
 <a v-bind:[someAttr]="value"... </a>
@@ -192,8 +188,8 @@ let app6 = new Vue({
 
 :::snippet 修饰符
 
-1. 修饰符 (Modifiers) 是以半角句号 . 指明的特殊后缀，用于指出一个指令应该以特殊方式绑定。
-2. `.prevent` 修饰符告诉 v-on 指令对于触发的事件调用 event.preventDefault()
+1. 修饰符 (`Modifiers`) 是以半角句号 . 指明的特殊后缀，用于指出一个指令应该以特殊方式绑定。
+2. `.prevent`修饰符告诉`v-on`指令对于触发的事件调用`event.preventDefault()`
 
 ```javascript
 let app7 = new Vue({
@@ -217,8 +213,7 @@ let app7 = new Vue({
 :::
 
 :::snippet 缩写
-
-Vue 为 v-bind 和 v-on 这两个最常用的指令，提供了特定简写
+`Vue`为`v-bind`和`v-on`这两个最常用的指令，提供了特定简写
 
 ```javascript
 let app8 = new Vue({
