--- a/src/notes/vuecourse/05.md
+++ b/src/notes/vuecourse/05.md
@@ -1,7 +1,7 @@
-:::snippet 绑定 HTML Class 对象语法
+:::snippet 绑定`HTML Class`对象语法
 
-1. `v-bind:class` 指令也可以与普通的 class 属性共存。当 isActive 或者 hasError 变化时，class 列表将相应地更新。
-2. `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。所有值都是真值，除非它们被定义为 假值（即除 false、0、""、null、undefined 和 NaN 以外皆为真值）。
+1. `v-bind:class`指令也可以与普通的`class`属性共存。当`isActive`或者`hasError`变化时，`class`列表将相应地更新。
+2. `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。所有值都是真值，除非它们被定义为 假值（即除`false`、`0`、`""`、`null`、`undefined`和`NaN`以外皆为真值）。
 3. 绑定的数据对象不必内联定义在模板里
 
 ```javascript
@@ -37,7 +37,7 @@ let app2 = new Vue({
 
 :::
 
-:::snippet 绑定 HTML Class 数组语法
+:::snippet 绑定`HTML Class`数组语法
 
 ```javascript
 let app3 = new Vue({
@@ -76,7 +76,7 @@ let app5 = new Vue({
 
 :::
 
-:::snippet 绑定 HTML Class 组件上
+:::snippet 绑定`HTML Class`组件上
 
 ```javascript
 Vue.component("my-component", {
@@ -136,7 +136,7 @@ let app7 = new Vue({
 
 :::snippet 绑定内联样式对象语法
 
-> CSS 属性名可以用驼峰式 (camelCase) 或短横线分隔 (kebab-case，记得用引号括起来) 来命名
+> `CSS`属性名可以用驼峰式 (`camelCase`) 或短横线分隔 (`kebab-case`，记得用引号括起来) 来命名
 
 ```javascript
 let app8 = new Vue({
@@ -229,6 +229,8 @@ let app10 = new Vue({
 </div>
 ```
 
+:::
+
 :::snippet 自动添加前缀
 
 > 当`v-bind:style`使用需要添加浏览器引擎前缀的`CSS`属性时，如`transform`，`Vue.js`会自动侦测并添加相应的前缀。
@@ -237,7 +239,7 @@ let app10 = new Vue({
 
 :::snippet 多重值
 
-> style 绑定中的属性提供一个包含多个值的数组，常用于提供多个带前缀的值。
+> `style`绑定中的属性提供一个包含多个值的数组，常用于提供多个带前缀的值。
 > 只会渲染数组中最后一个被浏览器支持的值。
 
 ```html
