--- a/src/notes/vuecourse/07.md
+++ b/src/notes/vuecourse/07.md
@@ -1,9 +1,9 @@
-:::snippet v-for 把一个数组对应为一组元素
+:::snippet `v-for`把一个数组对应为一组元素
 
-1. 我们可以用 `v-for` 指令基于一个数组来渲染一个列表。
-2. `v-for` 指令需要使用 `item in items` 形式的特殊语法，其中 `items` 是源数据数组，而 `item` 则是被迭代的数组元素的别名。
-3. `of` 替代 `in` 作为分隔符，因为它是最接近 `JavaScript` 迭代器的语法
-4. `v-for` 还支持一个可选的第二个参数，即当前项的索引。
+1. 我们可以用`v-for`指令基于一个数组来渲染一个列表。
+2. `v-for`指令需要使用`item in items`形式的特殊语法，其中`items`是源数据数组，而`item`则是被迭代的数组元素的别名。
+3. `of`替代`in`作为分隔符，因为它是最接近`JavaScript`迭代器的语法
+4. `v-for`还支持一个可选的第二个参数，即当前项的索引。
 
 ```javascript
 var example1 = new Vue({
@@ -74,9 +74,9 @@ let vForObject = new Vue({
 
 :::snippet `key`
 
-> 不提供`key`只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
-> 尽可能在使用`v-for`时提供 `key`，除非遍历输出的`DOM`内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
-> `key`它是`Vue`识别节点的一个通用机制
+1. 不提供`key`只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
+2. 尽可能在使用`v-for`时提供`key`，除非遍历输出的`DOM`内容非常简单，或者是刻意依赖默认行为以获取性能上的提升。
+3. `key`它是`Vue`识别节点的一个通用机制
 
 ```javascript
 let app = new Vue({
@@ -202,10 +202,8 @@ let app2 = new Vue({
 });
 app2.items[1] = "x"; // 不是响应性的
 app2.items.length = 2; // 不是响应性的
-
 Vue.set(app2.items, 1, "x"); //响应性的
 app2.$set(app2.items, indexOfItem, newValue);
-
 app2.items.splice(1, 1, "aaa"); //响应性的 先删除x 再 添加 'aaa'
 app2.items.splice(newLength); //响应性的 vm.items.length = newLength
 ```
@@ -255,8 +253,9 @@ let app3 = new Vue({
 :::snippet 对象更改检测注意事项
 
 > `JavaScript`的限制，`Vue`不能检测对象属性的添加或删除
-> `Vue`不能动态添加根级别的响应式属性.
-> 嵌套对象添加响应式属性
+
+1. `Vue`不能动态添加根级别的响应式属性.
+2. 嵌套对象添加响应式属性
 
 ```javascript
 let app4 = new Vue({
@@ -345,7 +344,7 @@ let app6 = new Vue({
 
 :::
 
-:::snippet 一段取值范围的 `v-for`
+:::snippet 一段取值范围的`v-for`
 
 > n 必须大于等于 1，从 1 开始到 n
 
@@ -363,7 +362,7 @@ let app7 = new Vue({
 
 :::
 
-:::snippet `v-for` on a `<template>`
+:::snippet `v-for`on a`<template>`
 
 ```javascript
 let app8 = new Vue({
@@ -388,7 +387,7 @@ let app8 = new Vue({
 
 :::
 
-:::snippet `v-for` with `v-if`
+:::snippet `v-for`with`v-if`
 
 ```javascript
 let app9 = new Vue({
