--- a/src/notes/vuecourse/08.md
+++ b/src/notes/vuecourse/08.md
@@ -1,5 +1,5 @@
 :::snippet 监听事件
-v-on 指令监听 DOM 事件，并在触发时运行一些 JavaScript 代码。
+`v-on`指令监听`DOM`事件，并在触发时运行一些`JavaScript`代码。
 
 ```javascript
 var example1 = new Vue({
@@ -20,7 +20,7 @@ var example1 = new Vue({
 :::
 
 :::snippet 事件处理方法
-v-on 还可以接收一个需要调用的方法名称。
+`v-on`还可以接收一个需要调用的方法名称。
 
 ```javascript
 var example2 = new Vue({
@@ -28,26 +28,25 @@ var example2 = new Vue({
   data: {
     name: "Vue.js"
   },
-  // 在 `methods` 对象中定义方法
+  // 在`methods`对象中定义方法
   methods: {
     greet: function(event) {
-      // `this` 在方法里指向当前 Vue 实例
+      //`this`在方法里指向当前 Vue 实例
       alert("Hello " + this.name + "!");
-      // `event` 是原生 DOM 事件
+      //`event`是原生 DOM 事件
       if (event) {
         alert(event.target.tagName);
       }
     }
   }
 });
-
 // 也可以用 JavaScript 直接调用方法
 example2.greet(); // => 'Hello Vue.js!'
 ```
 
 ```html
 <div id="example-2">
-  <!-- `greet` 是在下面定义的方法名 -->
+  <!--`greet`是在下面定义的方法名 -->
   <button v-on:click="greet">Greet</button>
 </div>
 ```
@@ -76,8 +75,8 @@ let example3 = new Vue({
 
 :::
 
-:::snippet 事件处理方法$event
-需要在内联语句处理器中访问原始的 DOM 事件。可以用特殊变量 $event 把它传入方法
+:::snippet 事件处理方法`$event`
+需要在内联语句处理器中访问原始的`DOM`事件。可以用特殊变量`$event`把它传入方法
 
 ```javascript
 let example4 = new Vue({
@@ -106,12 +105,12 @@ let example4 = new Vue({
 
 :::snippet 事件修饰符
 
-> 使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。
-> 用 v-on:click.prevent.self 会阻止所有的点击，
-> v-on:click.self.prevent 只会阻止对元素自身的点击。
-> addEventListener 中的 passive 选项提供了 .passive 修饰符。
-> 不要把 .passive 和 .prevent 一起使用，因为 .prevent 将会被忽略，同时浏览器可能会向你展示一个警告。
-> 请记住，.passive 会告诉浏览器你不想阻止事件的默认行为。
+1. 使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。
+2. 用`v-on:click.prevent.self`会阻止所有的点击，
+3. `v-on:click.self.prevent`只会阻止对元素自身的点击。
+4. `addEventListener`中的`passive`选项提供了`.passive`修饰符。
+5. 不要把`.passive`和`.prevent`一起使用，因为`.prevent`将会被忽略，同时浏览器可能会向你展示一个警告。
+6. 请记住，`.passive`会告诉浏览器你不想阻止事件的默认行为。
 
 ```html
 <!-- 阻止单击事件继续传播 -->
@@ -138,8 +137,8 @@ let example4 = new Vue({
 <a v-on:click.once="doThis"></a>
 
 <!-- 滚动事件的默认行为 (即滚动行为) 将会立即触发 -->
-<!-- 而不会等待 `onScroll` 完成  -->
-<!-- 这其中包含 `event.preventDefault()` 的情况 -->
+<!-- 而不会等待`onScroll`完成  -->
+<!-- 这其中包含`event.preventDefault()`的情况 -->
 <div v-on:scroll.passive="onScroll">...</div>
 ```
 
@@ -147,25 +146,25 @@ let example4 = new Vue({
 
 :::snippet 按键修饰符
 
-> .enter
-> .tab
-> .delete (捕获“删除”和“退格”键)
-> .esc
-> .space
-> .up
-> .down
-> .left
-> .right
-> .page-down
+1. `.enter`
+2. `.tab`
+3. `.delete`(捕获“删除”和“退格”键)
+4. `.esc`
+5. `.space`
+6. `.up`
+7. `.down`
+8. `.left`
+9. `.right`
+10. `.page-down`
 
 ```javascript
 //  config.keyCodes 对象自定义按键修饰符别名：
-// 可以使用 `v-on:keyup.f1`
+// 可以使用`v-on:keyup.f1`
 Vue.config.keyCodes.f1 = 112;
 ```
 
 ```html
-<!-- 只有在 `keyCode` 是 13 时调用 `vm.submit()` -->
+<!-- 只有在`keyCode`是 13 时调用`vm.submit()`-->
 <input v-on:keyup.13="submit" />
 <!-- 同上 -->
 <input v-on:keyup.enter="submit" />
@@ -179,19 +178,20 @@ Vue.config.keyCodes.f1 = 112;
 
 :::snippet 系统修饰键
 
-> .ctrl
-> .alt
-> .shift
-> .meta //在 Mac 系统键盘上，meta 对应 command 键 (⌘)。在 Windows 系统键盘 meta 对应 Windows 徽标键 (⊞)。
-> .exact 修饰符允许你控制由精确的系统修饰符组合触发的事件。
-> .left
-> .right
-> .middle
-> 请注意修饰键与常规按键不同，在和 keyup 事件一起用时，事件触发时修饰键必须处于按下状态。换句话说，只有在按住 ctrl 的情况下释放其它按键，才能触发 keyup.ctrl。而单单释放 ctrl 也不会触发事件。如果你想要这样的行为，请为 ctrl 换用 keyCode：keyup.17。
+1. `.ctrl`
+2. `.alt`
+3. `.shift`
+4. `.meta`//在 Mac 系统键盘上，`meta`对应`command 键 (⌘)`。在`Windows`系统键盘`meta`对应`Windows 徽标键 (⊞)`。
+5. `.exact`修饰符允许你控制由精确的系统修饰符组合触发的事件。
+6. `.left`
+7. `.right`
+8. `.middle`
+
+> 请注意修饰键与常规按键不同，在和`keyup`事件一起用时，事件触发时修饰键必须处于按下状态。换句话说，只有在按住`ctrl`的情况下释放其它按键，才能触发`keyup.ctrl`。而单单释放`ctrl`也不会触发事件。如果你想要这样的行为，请为`ctrl`换用`keyCode：keyup.17`。
 
 ```javascript
 //  config.keyCodes 对象自定义按键修饰符别名：
-// 可以使用 `v-on:keyup.f1`
+// 可以使用`v-on:keyup.f1`
 Vue.config.keyCodes.f1 = 112;
 ```
 
@@ -214,10 +214,11 @@ Vue.config.keyCodes.f1 = 112;
 
 :::
 
-:::snippet HTML 中监听事件?
-Vue.js 事件处理方法和表达式都严格绑定在当前视图的 ViewModel 上，它不会导致任何维护上的困难。
-1. 扫一眼 HTML 模板便能轻松定位在 JavaScript 代码里对应的方法。
-2. 因为你无须在 JavaScript 里手动绑定事件，你的 ViewModel 代码可以是非常纯粹的逻辑，和 DOM 完全解耦，更易于测试。
-3. 当一个 ViewModel 被销毁时，所有的事件处理器都会自动被删除。你无须担心如何清理它们。
+:::snippet `HTML`中监听事件?
+`Vue.js`事件处理方法和表达式都严格绑定在当前视图的`ViewModel`上，它不会导致任何维护上的困难。
+
+1. 扫一眼`HTML`模板便能轻松定位在`JavaScript`代码里对应的方法。
+2. 因为你无须在`JavaScript`里手动绑定事件，你的`ViewModel`代码可以是非常纯粹的逻辑，和`DOM`完全解耦，更易于测试。
+3. 当一个`ViewModel`被销毁时，所有的事件处理器都会自动被删除。你无须担心如何清理它们。
 
 :::
