20191227提交表单 组件

--- a/src/notes/vuecourse/10.md
+++ b/src/notes/vuecourse/10.md
@@ -1,51 +1,80 @@
 :::snippet 基本示例
 
-> 因为组件是可复用的 Vue 实例，所以它们与 new Vue 接收相同的选项，例如 data、computed、watch、methods 以及生命周期钩子等。仅有的例外是像 el 这样根实例特有的选项。
-> 当点击按钮时，每个组件都会各自独立维护它的 count。因为你每用一次组件，就会有一个它的新实例被创建。
-> 一个组件的 data 选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝。
-> 全局注册的 Vue.component('my-component-name', { ... options ...})
+> 组件是可复用的`Vue`实例，所以它们与`new Vue`接收相同的选项，例如`data`、`computed`、`watch`、`methods`以及生命周期钩子等。仅有的例外是像`el`这样根实例特有的选项。<br>
+> 一个组件的`data`选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝<br>
+> 全局注册的`Vue.component('my-component-name', { ... options ...})`<br>
 
 ```javascript
-Vue.component('button-count', {
-    data: function() {
-        return {
-            count: 0
-        };
-    },
-    template:
-        '<button v-on:click="count++">You clicked me {{ count}} times.</button>'
+var buttonCounterData = {
+  count: 0
+};
+// 定义一个名为 button-counter 的新组件
+Vue.component("button-counter", {
+  // 一个组件的 data 选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝
+  // 正确的写法
+  // data: function () {
+  //     return {
+  //         count: 0
+  //     };
+  // },
+  // 正确的写法
+  // data: function () {
+  //     // // 这个才是返回对象的独立的拷贝
+  //     return JSON.parse(JSON.stringify(buttonCounterData))
+  // },
+  // 错误的写法
+  data: function() {
+    // // 这个不是返回对象的独立的拷贝
+    return buttonCounterData;
+  },
+  template:
+    '<button v-on:click="count++">You clicked me {{ count }} times.</button>'
 });
-let app01 = new Vue({
-    el: '#app01'
+let componentsDemo = new Vue({
+  el: "#components-demo"
 });
 ```
 
 ```html
-<div id="app01">
-    <button-count></button-count>
-    <button-count></button-count>
-    <button-count></button-count>
+<div id="components-demo">
+  <button-counter></button-counter>
+  <button-counter></button-counter>
+  <button-counter></button-counter>
 </div>
 ```
 
 :::
 
-:::snippet 通过 Prop 向子组件传递数据
+:::snippet 通过`Prop`向子组件传递数据
 
 ```javascript
-Vue.component('blog-props', {
-    props: ['title'],
-    template: '<h3>{{ title }}</h3>'
+Vue.component("blog-post", {
+  props: ["title"],
+  template: "<h3>{{ title }}</h3>"
 });
-let app02 = new Vue({
-    el: '#app02'
+let blogPostDemo = new Vue({
+  el: "#blog-post-demo",
+  data: {
+    posts: [
+      { id: 1, title: "My journey with Vue" },
+      { id: 2, title: "Blogging with Vue" },
+      { id: 3, title: "Why Vue is so fun" }
+    ]
+  }
 });
 ```
 
 ```html
-<div id="app02">
-    <blog-props title="测试"></blog-props>
-    <blog-props title="表头"></blog-props>
+<div id="blog-post-demo">
+  <blog-post title="My journey with Vue"></blog-post>
+  <blog-post title="Blogging with Vue"></blog-post>
+  <blog-post title="Why Vue is so fun"></blog-post>
+  <!-- 循环组件 -->
+  <blog-post
+    v-for="post in posts"
+    v-bind:key="post.id"
+    v-bind:title="post.title"
+  ></blog-post>
 </div>
 ```
 
@@ -53,182 +82,166 @@ let app02 = new Vue({
 
 :::snippet 单个根元素
 
+> 使用了`JavaScript`的模板字符串来让多行的模板更易读。<br>
+> 它们在`IE`下并没有被支持，所以如果你需要在不 (经过`Babel`或`TypeScript`之类的工具) 编译的情况下支持`IE`，请使用折行转义字符取而代之。
+
 ```javascript
-Vue.component('blog-post', {
-    props: ['post'],
-    template: `
+Vue.component("blog-post", {
+  props: ["post"],
+  template: `
     <div class="blog-post">
       <h3>{{ post.title }}</h3>
       <div v-html="post.content"></div>
     </div>
-  `
+ `
 });
-let app03 = new Vue({
-    el: '#app03',
-    data: {
-        posts: [
-            {
-                id: 1,
-                title: '博客Vue',
-                content: 'vue 学习笔记'
-            },
-            {
-                id: 2,
-                title: '简书Vue',
-                content: '简书 学习笔记'
-            },
-            {
-                id: 3,
-                title: 'gitfun',
-                content: 'git 学习笔记'
-            }
-        ]
-    }
+let blogPostRootDemo = new Vue({
+  el: "#blog-post-root-demo",
+  data: {
+    posts: [
+      {
+        id: 1,
+        title: "博客Vue",
+        content: "vue 学习笔记"
+      },
+      {
+        id: 2,
+        title: "简书Vue",
+        content: "简书 学习笔记"
+      },
+      {
+        id: 3,
+        title: "github",
+        content: "git 学习笔记"
+      }
+    ]
+  }
 });
 ```
 
 ```html
-<div id="app03">
-    <blog-post
-        v-for="post in posts"
-        v-bind:key="post.id"
-        v-bind:post="post"
-    ></blog-post>
+<div id="blog-post-root-demo">
+  <blog-post
+    v-for="post in posts"
+    v-bind:key="post.id"
+    v-bind:post="post"
+  ></blog-post>
 </div>
 ```
 
 :::
 
-:::snippet 通过事件向父级组件发送消息
+:::snippet 监听子组件事件
 
-> 我们可以调用内建的 `$emit`方法并传入事件的名字，来向父级组件触发一个事件：
-> 使用 $emit 的第二个参数来提供这个值,在父级组件监听这个事件的时候，我们可以通过 $event 访问到被抛出的这个值
+1. 我们可以调用内建的`$emit`方法并传入事件的名字，来向父级组件触发一个事件：
+2. 使用`$emit`的第二个参数来提供这个值,在父级组件监听这个事件的时候，我们可以通过`$event`访问到被抛出的这个值
 
 ```javascript
-Vue.component('blog-post-event', {
-    props: ['post'],
-    template: `
+Vue.component("blog-post-event", {
+  props: ["post"],
+  template: `
     <div class="blog-post">
       <h3>{{ post.title }}</h3>
       <button v-on:click="$emit('parent-font')">
-        font_size
+        字体
       </button>
-      <button v-on:click="$emit('parent-width',10)">
-        width_size
+      <button v-on:click="$emit('parent-style',10)">
+       一个参数  
       </button>
-      <button v-on:click="$emit('parent-height',10)">
-        width_size
+      <button v-on:click="$emit('parent-styles',[10,20])">
+       数组参数
+      </button>
+      <button v-on:click="$emit('parent-style-fun',50,20)">
+       方法
       </button>
       <div v-html="post.content"></div>
     </div>
-  `
+ `
 });
-let app04 = new Vue({
-    el: '#app04',
-    data: {
-        posts: [
-            {
-                id: 1,
-                title: '博客Vue',
-                content: 'vue 学习笔记'
-            },
-            {
-                id: 2,
-                title: '简书Vue',
-                content: '简书 学习笔记'
-            },
-            {
-                id: 3,
-                title: 'gitfun',
-                content: 'git 学习笔记'
-            }
-        ],
-        postFontSize: 1,
-        widthSize: 400,
-        heightSize: 160,
-        colorValue: 'red'
-    },
-    methods: {
-        parentHeight: function(enlargeAmount) {
-            this.heightSize += enlargeAmount;
-        }
+let blogPostsEventsDemo = new Vue({
+  el: "#blog-posts-events-demo",
+  data: {
+    posts: [
+      {
+        id: 1,
+        title: "博客Vue",
+        content: "vue 学习笔记"
+      },
+      {
+        id: 2,
+        title: "简书Vue",
+        content: "简书 学习笔记"
+      },
+      {
+        id: 3,
+        title: "gitfun",
+        content: "git 学习笔记"
+      }
+    ],
+    postFontSize: 1,
+    widthSize: 400,
+    heightSize: 160,
+    colorValue: "red"
+  },
+  methods: {
+    parentStyleFun: function(enlargeAmount, enlargeAmount1) {
+      this.heightSize += enlargeAmount;
+      this.widthSize += enlargeAmount1;
     }
+  }
 });
 ```
 
 ```html
-<div id="app04">
-    <div>
-        <blog-post-event
-            :style="{ fontSize: postFontSize + 'em',width: widthSize+'px', height: heightSize+'px',background: colorValue}"
-            v-for="post in posts"
-            v-bind:key="post.id"
-            v-bind:post="post"
-            v-on:parent-font="postFontSize += 0.2;"
-            v-on:parent-width="widthSize += $event;"
-            v-on:parent-height="parentHeight"
-        ></blog-post-event>
-    </div>
+<div id="blog-posts-events-demo" class="demo">
+  <blog-post-event
+    :style="{ fontSize: postFontSize + 'em',width: widthSize+'px', height: heightSize+'px',
+          background: colorValue}"
+    v-for="post in posts"
+    v-bind:key="post.id"
+    v-bind:post="post"
+    v-on:parent-font="postFontSize += 0.2;"
+    v-on:parent-style="widthSize += $event;"
+    v-on:parent-styles="widthSize += $event[0];heightSize += $event[1];"
+    v-on:parent-style-fun="parentStyleFun"
+  ></blog-post-event>
 </div>
 ```
 
 :::
 
-:::snippet 自定义事件也可以用于创建支持 v-model 的自定义输入组件
+:::snippet 自定义事件也可以用于创建支持`v-model`的自定义输入组件
 
 ```javascript
-let app05 = new Vue({
-    el: '#app05',
-    data: {
-        searchText1: '',
-        searchText2: ''
-    }
-});
-```
-
-```html
-<div id="app05">
-    <input v-model="searchText1" />
-    <p>{{searchText1}}</p>
+Vue.component("custom-input", {
+  props: ["value"],
+  template: `
     <input
-        v-bind:value="searchText2"
-        v-on:input="searchText2 = $event.target.value"
-    />
-    <p>{{searchText2}}</p>
-</div>
-```
-
-:::
-
-:::snippet 通过事件向父级组件发送消息
-
-> 我们可以调用内建的 `$emit`方法并传入事件的名字，来向父级组件触发一个事件：
-> 使用 $emit 的第二个参数来提供这个值,在父级组件监听这个事件的时候，我们可以通过 $event 访问到被抛出的这个值
-
-```javascript
-Vue.component('custom-input', {
-    props: ['value'],
-    template: `
-                <div>
-    <input
-      v-bind:val ue="value"
+      v-bind:value="value"
       v-on:input="$emit('input', $event.target.value)"
     >
-    <p>{{value}}</p>
-    </div>
-  `
+ `
 });
-let app06 = new Vue({
-    el: '#app06',
-    data: {
-        searchText: ''
-    }
+let customInputDemo = new Vue({
+  el: "#custom-input-demo",
+  data: {
+    customText: "",
+    searchText: ""
+  }
 });
 ```
 
 ```html
-<div id="app06">
-    <custom-input v-model="searchText"></custom-input>
+<div id="custom-input-demo">
+  custom-input
+  <br />
+  <custom-input v-model="customText"></custom-input>
+  {{customText}}
+  <br />
+  input
+  <br />
+  <input v-model="searchText" />
+  {{searchText}}
 </div>
 ```
 
@@ -236,25 +249,33 @@ let app06 = new Vue({
 
 :::snippet 通过插槽分发内容
 
+```css
+.demo-alert-box {
+  padding: 10px 20px;
+  background: #f3beb8;
+  border: 1px solid #f09898;
+}
+```
+
 ```javascript
-Vue.component('alert-box', {
-    template: `
+Vue.component("alert-box", {
+  template: `
     <div class="demo-alert-box">
       <strong>Error!</strong>
       <slot></slot>
     </div>
-  `
+ `
 });
-let app07 = new Vue({
-    el: '#app07'
+let alertBoxDemo = new Vue({
+  el: "#alert-box-demo"
 });
 ```
 
 ```html
-<div id="app07">
-    <alert-box>
-        Something bad happened.
-    </alert-box>
+<div id="alert-box-demo">
+  <alert-box>
+    Something bad happened.
+  </alert-box>
 </div>
 ```
 
@@ -264,85 +285,82 @@ let app07 = new Vue({
 
 ```css
 .tab-button {
-    padding: 6px 10px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    background: #f0f0f0;
-    margin-bottom: -1px;
-    margin-right: -1px;
+  padding: 6px 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background: #f0f0f0;
+  margin-bottom: -1px;
+  margin-right: -1px;
 }
-
 .tab-button:hover {
-    background: #e0e0e0;
+  background: #e0e0e0;
 }
-
 .tab-button.active {
-    background: #e0e0e0;
+  background: #e0e0e0;
 }
-
 .tab {
-    border: 1px solid #ccc;
-    padding: 10px;
+  border: 1px solid #ccc;
+  padding: 10px;
 }
 ```
 
 ```javascript
-Vue.component('tab-home', {
-    template: '<div>home componet</div>'
+Vue.component("tab-home", {
+  template: "<div>home componet</div>"
 });
-Vue.component('tab-house', {
-    template: '<div>house componet</div>'
+Vue.component("tab-house", {
+  template: "<div>house componet</div>"
 });
-Vue.component('tab-family', {
-    template: '<div>family componet</div>'
+Vue.component("tab-family", {
+  template: "<div>family componet</div>"
 });
-let app08 = new Vue({
-    el: '#app08',
-    data: {
-        currentTab: 'Home',
-        tabs: ['home', 'house', 'family']
-    },
-    computed: {
-        currentTabComponent: function() {
-            return 'tab-' + this.currentTab.toLowerCase();
-        }
+let dynamicComponentDemo = new Vue({
+  el: "#dynamic-component-demo",
+  data: {
+    currentTab: "Home",
+    tabs: ["home", "house", "family"]
+  },
+  computed: {
+    currentTabComponent: function() {
+      return "tab-" + this.currentTab.toLowerCase();
     }
+  }
 });
 ```
 
 ```html
-<div id="app08">
-    <button
-        v-for="tab in tabs"
-        v-bind:key="tab"
-        v-bind:class="['tab-button', { active: currentTab === tab }]"
-        v-on:click="currentTab = tab"
-    >
-        {{ tab }}
-    </button>
-    <component v-bind:is="currentTabComponent" class="tab"></component>
+<div id="dynamic-component-demo">
+  <button
+    v-for="tab in tabs"
+    v-bind:key="tab"
+    v-bind:class="['tab-button', { active: currentTab === tab }]"
+    v-on:click="currentTab = tab"
+  >
+    {{ tab }}
+  </button>
+  <component v-bind:is="currentTabComponent" class="tab"></component>
 </div>
 ```
 
 :::
 
-:::snippet 解析 DOM 模板时的注意事项
+:::snippet 解析`DOM`模板时的注意事项
 
-> `<ul>`、`<ol>`、`<table>` 和 `<select>`，对于哪些元素可以出现在其内部是有严格限制的。而有些元素，诸如 `<li>`、`<tr>` 和 `<option>`，只能出现在其它某些特定的元素内部。
-> 如果我们从以下来源使用模板的话，这条限制是不存在的：`字符串 (例如：template: '...')`、`单文件组件 (.vue)`、`<script type="text/x-template">`
+> `<ul>`、`<ol>`、`<table>`和`<select>`，对于哪些元素可以出现在其内部是有严格限制的。而有些元素，诸如`<li>`、`<tr>`和`<option>`，只能出现在其它某些特定的元素内部。<br>
+> 如果我们从以下来源使用模板的话，这条限制是不存在的：字符串 (例如：`template: '...'`)、单文件组件 (`.vue`)、`<script type="text/x-template">`
 
 ```html
 <div id="app09">
-    错误
-    <table>
-        <blog-post-row></blog-post-row>
-    </table>
-    正确
-    <table>
-        <tr is="blog-post-row"></tr>
-    </table>
+  错误
+  <table>
+    <blog-post-row></blog-post-row>
+  </table>
+  正确
+  <table>
+    <tr is="blog-post-row"></tr>
+  </table>
 </div>
 ```
 
