--- a/src/notes/vuecourse/08.md
+++ b/src/notes/vuecourse/08.md
@@ -104,13 +104,15 @@ let example4 = new Vue({
 :::
 
 :::snippet 事件修饰符
-
+Vue.js 为 v-on 提供了事件修饰符。之前提过，修饰符是由点开头的指令后缀来表示的。
 1. 使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。
 2. 用`v-on:click.prevent.self`会阻止所有的点击，
 3. `v-on:click.self.prevent`只会阻止对元素自身的点击。
 4. `addEventListener`中的`passive`选项提供了`.passive`修饰符。
 5. 不要把`.passive`和`.prevent`一起使用，因为`.prevent`将会被忽略，同时浏览器可能会向你展示一个警告。
 6. 请记住，`.passive`会告诉浏览器你不想阻止事件的默认行为。
+
+> 使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。因此，用 v-on:click.prevent.self 会阻止所有的点击，而 v-on:click.self.prevent 只会阻止对元素自身的点击。
 
 ```html
 <!-- 阻止单击事件继续传播 -->
@@ -214,7 +216,7 @@ Vue.config.keyCodes.f1 = 112;
 
 :::
 
-:::snippet `HTML`中监听事件?
+:::snippet `HTML`中监听事件
 `Vue.js`事件处理方法和表达式都严格绑定在当前视图的`ViewModel`上，它不会导致任何维护上的困难。
 
 1. 扫一眼`HTML`模板便能轻松定位在`JavaScript`代码里对应的方法。
