--- a/src/notes/vuecourse/09.md
+++ b/src/notes/vuecourse/09.md
@@ -1,87 +1,282 @@
-:::snippet 表单输入绑定
+:::snippet 基础用法
 
-1. `v-model`会忽略所有表单元素的`value`、`checked`、`selected`特性的初始值而总是将`Vue`实例的数据作为数据来源。
-2. 你应该通过`JavaScript`在组件的 data 选项中声明初始值。
-3. 对于需要使用输入法 (如中文、日文、韩文等) 的语言，你会发现`v-model`不会在输入法组合文字过程中得到更新。
-4. 如果你也想处理这个过程，请使用`input`事件。
-5. 在文本区域插值 (`<textarea></textarea>`) 并不会生效，应用`v-model`来代替。
-6. `v-model`表达式的初始值未能匹配任何选项，`<select>`元素将被渲染为`未选中`状态。在`iOS`中，这会使用户无法选择第一个选项。
+1. `v-model`指令在表单`<input>`、`<textarea>`及 `<select>`元素上创建双向数据绑定。
+2. 它会根据控件类型自动选取正确的方法来更新元素。
+3. `v-model`本质上是语法糖。
+4. `v-model`在内部为不同的输入元素使用不同的属性并抛出不同的事件
+5. `text`和`textarea`元素使用`value`属性和`input`事件；
+6. `checkbox`和`radio`使用`checked`属性和`change`事件；
+7. `select`字段将`value`作为`prop`并将`change`作为事件。
+
+> `v-model`会忽略所有表单元素的`value`、`checked`、`selected`特性的初始值而总是将`Vue`实例的数据作为数据来源。<br/>
+> 你应该通过 `JavaScript`在组件的`data`选项中声明初始值。<br/>
+> 对于需要使用输入法 (如中文、日文、韩文等) 的语言，`v-model`不会在输入法组合文字过程中得到更新。<br/>
+> 请使用`input`事件。
+
+:::
+
+:::snippet 文本
 
 ```javascript
-let app01 = new Vue({
-  el: "#app01",
+let example1 = new Vue({
+  el: "#example-1",
   data: {
-    txtMessage: "",
-    textareaMessage: "",
+    message: "wenben"
+  }
+});
+```
+
+```html
+<div id="example-1">
+  <input v-model="message" placeholder="edit me" />
+  <p>Message is: {{ message }}</p>
+</div>
+```
+
+:::
+:::snippet 多行文本
+
+> 在文本区域插值 (`<textarea>{{text}}</textarea>`) 并不会生效，应用`v-model`来代替。
+
+```javascript
+let example2 = new Vue({
+  el: "#example-2",
+  data: {
+    message: "duohangwenben"
+  }
+});
+```
+
+```html
+<div id="example-2">
+  <span>Multiline message is:</span>
+  <p style="white-space: pre-line;">{{ message }}</p>
+  <br />
+  <textarea v-model="message" placeholder="add multiple lines"></textarea>
+</div>
+```
+
+:::
+:::snippet 复选框
+
+1. 单个复选框，绑定到布尔值
+2. 多个复选框，绑定到同一个数组
+
+> `true-value`和 `false-value`特性并不会影响输入控件的`value`特性，因为浏览器在提交表单时并不会包含未被选中的复选框。<br/> 如果要确保表单中这两个值中的一个能够被提交，(比如`yes`或`no`)，请换用单选按钮。
+
+```javascript
+let example3 = new Vue({
+  el: "#example-3",
+  data: {
     checked: true,
-    checkedNames: [],
-    sex: "",
-    selected: "",
-    selecteds: [],
+    checkedNames: ["Jack"],
+    toggle: "yes"
+  }
+});
+```
+
+```html
+<div id="example-3">
+  单个复选框:
+  <br />
+  <input type="checkbox" id="checkbox" v-model="checked" />
+  <label for="checkbox">{{ checked }}</label>
+  <br />
+  单个复选框 绑定string
+  <br />
+  <input
+    type="checkbox"
+    id="toggle"
+    v-model="toggle"
+    true-value="yes"
+    false-value="no"
+  />
+  <label for="toggle">{{ toggle }}</label>
+  <br />
+  多个复选框:
+  <br />
+  <input type="checkbox" id="jack" value="Jack" v-model="checkedNames" />
+  <label for="jack">Jack</label>
+  <input type="checkbox" id="john" value="John" v-model="checkedNames" />
+  <label for="john">John</label>
+  <input type="checkbox" id="mike" value="Mike" v-model="checkedNames" />
+  <label for="mike">Mike</label>
+  <br />
+  <span>Checked names: {{ checkedNames }}</span>
+</div>
+```
+
+:::
+
+:::snippet 单选按钮
+
+```javascript
+let example4 = new Vue({
+  el: "#example-4",
+  data: {
+    picked: "Two",
+    sex: "男人",
+    women: "女人",
+    men: "男人"
+  }
+});
+```
+
+```html
+<div id="example-4">
+  <input type="radio" id="one" value="One" v-model="picked" />
+  <label for="one">One</label>
+  <br />
+  <input type="radio" id="two" value="Two" v-model="picked" />
+  <label for="two">Two</label>
+  <br />
+  <span>Picked: {{ picked }}</span>
+  <br />
+  <input type="radio" id="men" v-bind:value="men" v-model="sex" />
+  <label for="men">men</label>
+  <br />
+  <input type="radio" id="women" v-bind:value="women" v-model="sex" />
+  <label for="women">women</label>
+  <br />
+  <span>sex: {{ sex }}</span>
+</div>
+```
+
+:::
+
+:::snippet 选择框
+
+1. 单选时 (绑定到一个值)
+2. 多选时 (绑定到一个数组)
+3. `selected` 选中的值是`option`的`value`，没有设置时默认就是`option`的`text`.
+
+> 如果`v-model`表达式的初始值未能匹配任何选项，`<select>`元素将被渲染为“未选中”状态。<br/>
+> 在`iOS`中，这会使用户无法选择第一个选项。因为这样的情况下，`iOS`不会触发`change`事件。<br/>
+> 因此，更推荐像上面这样提供一个值为空的禁用选项。
+
+```javascript
+let example5 = new Vue({
+  el: "#example-5",
+  data: {
+    selected: "A"
+  }
+});
+let example6 = new Vue({
+  el: "#example-6",
+  data: {
+    selected: ["A", "B"]
+  }
+});
+let example7 = new Vue({
+  el: "#example-7",
+  data: {
+    selected: "A",
     options: [
-      { text: "One", value: "A" },
-      { text: "Two", value: "B" },
-      { text: "Three", value: "C" }
+      {
+        text: "One",
+        value: "A"
+      },
+      {
+        text: "Two",
+        value: "B"
+      },
+      {
+        text: "Three",
+        value: "C"
+      }
+    ]
+  }
+});
+let example8 = new Vue({
+  el: "#example-8",
+  data: {
+    selected: {
+      text: "Two",
+      value: "B"
+    },
+    options: [
+      {
+        text: "One",
+        value: "A"
+      },
+      {
+        text: "Two",
+        value: "B"
+      },
+      {
+        text: "Three",
+        value: "C"
+      }
     ]
   }
 });
 ```
 
 ```html
-<form action="" id="app01">
-  <p>
-    v-model 会忽略所有表单元素的 value、checked、selected 特性的初始值而总是将
-    Vue 实例的数据作为数据来源。
-  </p>
-  <p>你应该通过 JavaScript 在组件的 data 选项中声明初始值。</p>
-  <input v-model="txtMessage" placeholder="edit me" />
-  <p>txtMessage is: {{ txtMessage }}</p>
+<div id="example-5">
+  <select v-model="selected">
+    <option disabled value="">请选择</option>
+    <option>A</option>
+    <option>B</option>
+    <option>C</option>
+  </select>
+  <span>Selected: {{ selected }}</span>
+</div>
+<div id="example-6">
+  <select v-model="selected" multiple style="width: 50px;">
+    <option>A</option>
+    <option>B</option>
+    <option>C</option>
+  </select>
   <br />
-  <textarea v-model="textareaMessage" placeholder="add multiple lines">
-这个不会生效</textarea
-  >
-  <p style="white-space: pre-line;">{{ textareaMessage }}</p>
-  <textarea placeholder="add multiple lines">这个会生效</textarea>
-  <br />
-  <input type="checkbox" id="checkbox" v-model="checked" />
-  <label for="checkbox">{{ checked }}</label>
-  <div id="checkeDiv">
-    <input type="checkbox" id="jack" value="Jack" v-model="checkedNames" />
-    <label for="jack">Jack</label>
-    <input type="checkbox" id="john" value="John" v-model="checkedNames" />
-    <label for="john">John</label>
-    <input type="checkbox" id="mike" value="Mike" v-model="checkedNames" />
-    <label for="mike">Mike</label>
-    <br />
-    <span>Checked names: {{ checkedNames }}</span>
-  </div>
-  <br />
-  <div id="radioDiv">
-    <input type="radio" id="men" value="男" v-model="sex" />
-    <label for="men">男</label>
-    <input type="radio" id="women" value="女" v-model="sex" />
-    <label for="men">女</label>
-    <input type="radio" id="katoey" value="人妖" v-model="sex" />
-    <label for="katoey">人妖</label>
-    <span>sex: {{ sex }}</span>
-  </div>
-  <div id="selectDiv">
-    <select id="sel01" v-model="selected">
-      <option disabled value="">请选择</option>
-      <option>A</option>
-      <option>B</option>
-      <option>C</option>
-    </select>
-    <span>第一个下拉框selected: {{ selected }}</span>
-    <br />
-    <select id="sel02" v-model="selecteds" multiple style="width: 50px;">
-      <option v-for="option in options" v-bind:value="option.value"
-        >{{option.text}}</option
-      >
-    </select>
-    <span>第二个下拉框selecteds: {{ selecteds }}</span>
-  </div>
-</form>
+  <span>Selected: {{ selected }}</span>
+</div>
+<div id="example-7">
+  <select v-model="selected">
+    <option v-for="option in options" v-bind:value="option.value">
+      {{ option.text }}
+    </option>
+  </select>
+  <span>Selected: {{ selected }}</span>
+</div>
+<div id="example-8">
+  <select v-model="selected">
+    <option v-for="option in options" v-bind:value="option">
+      {{ option.text }}
+    </option>
+  </select>
+  <span>Selected: {{ selected }}</span>
+</div>
+```
+
+:::
+
+:::snippet 修饰符
+
+1. `v-model`在每次`input`事件触发后将输入框的值与数据进行同步 。添加`lazy`修饰符，从而转变为使用`change`事件进行同步
+2. 想自动将用户的输入值转为数值类型，可以给`v-model`添加`number`修饰符
+3. 想自动过滤用户输入的首尾空白字符，可以给`v-model`添加`trim`修饰符
+
+```javascript
+let example9 = new Vue({
+  el: "#example-9",
+  data: {
+    message: "",
+    age: null,
+    msg: ""
+  }
+});
+```
+
+```html
+<div id="example-9">
+  <input v-model.lazy="message" placeholder="edit me" />
+  <p>Message length: {{ message.length }}</p>
+  <input v-model.number="age" type="number" />
+  <p>age is: {{ age }}</p>
+  <input v-model.trim="msg" />
+  <p>msg length: {{ msg.length }}</p>
+</div>
 ```
 
 :::
