20191227提交组件 注册 prop

--- a/src/notes/vuecourse/05.md
+++ b/src/notes/vuecourse/05.md
@@ -4,6 +4,17 @@
 2. `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。所有值都是真值，除非它们被定义为 假值（即除`false`、`0`、`""`、`null`、`undefined`和`NaN`以外皆为真值）。
 3. 绑定的数据对象不必内联定义在模板里
 
+```html
+<!-- 结果渲染为  <div id="app" class="static active"></div> -->
+<div
+  id="app"
+  class="static"
+  v-bind:class="{ active: isActive, 'text-danger': hasError }"
+></div>
+<!-- 结果渲染为  <div id="app-2" class="active"></div> -->
+<div v-bind:class="classObject" id="app-2"></div>
+```
+
 ```javascript
 let app = new Vue({
   el: "#app",
@@ -24,20 +35,18 @@ let app2 = new Vue({
 });
 ```
 
-```html
-<!-- 结果渲染为  <div id="app" class="static active"></div> -->
-<div
-  id="app"
-  class="static"
-  v-bind:class="{ active: isActive, 'text-danger': hasError }"
-></div>
-<!-- 结果渲染为  <div id="app-2" class="active"></div> -->
-<div v-bind:class="classObject" id="app-2"></div>
-```
-
 :::
 
 :::snippet 绑定`HTML Class`数组语法
+
+```html
+<!-- 结果渲染为 <div id="app-3" class="active text-danger"></div> -->
+<div id="app-3" v-bind:class="[activeClass, errorClass]"></div>
+<!-- 结果渲染为 <div id="app-4" class="text-danger"></div> -->
+<div id="app-4" v-bind:class="[isActive ? activeClass : '', errorClass]"></div>
+<!-- 结果渲染为 <div id="app-5" class="active-div text-danger"></div> -->
+<div id="app-5" v-bind:class="[{ active: isActive }, errorClass]"></div>
+```
 
 ```javascript
 let app3 = new Vue({
@@ -65,18 +74,20 @@ let app5 = new Vue({
 });
 ```
 
-```html
-<!-- 结果渲染为 <div id="app-3" class="active text-danger"></div> -->
-<div id="app-3" v-bind:class="[activeClass, errorClass]"></div>
-<!-- 结果渲染为 <div id="app-4" class="text-danger"></div> -->
-<div id="app-4" v-bind:class="[isActive ? activeClass : '', errorClass]"></div>
-<!-- 结果渲染为 <div id="app-5" class="active-div text-danger"></div> -->
-<div id="app-5" v-bind:class="[{ active: isActive }, errorClass]"></div>
-```
-
 :::
 
 :::snippet 绑定`HTML Class`组件上
+
+```html
+<div id="app-6">
+  <!-- 结果渲染为 <p  class="foo bar baz boo"> 姓名：huang7000  年龄：18 </p> -->
+  <my-component class="baz boo"></my-component>
+  <!-- 结果渲染为 <p  class="foo bar active-div text-danger"> 姓名：huang7000  年龄：18 </p> -->
+  <my-component
+    v-bind:class="[{ active: isActive }, errorClass]"
+  ></my-component>
+</div>
+```
 
 ```javascript
 Vue.component("my-component", {
@@ -99,20 +110,17 @@ let app6 = new Vue({
 //id=app08的div里面div的class 渲染加上my-component的样式
 ```
 
-```html
-<div id="app-6">
-  <!-- 结果渲染为 <p  class="foo bar baz boo"> 姓名：huang7000  年龄：18 </p> -->
-  <my-component class="baz boo"></my-component>
-  <!-- 结果渲染为 <p  class="foo bar active-div text-danger"> 姓名：huang7000  年龄：18 </p> -->
-  <my-component
-    v-bind:class="[{ active: isActive }, errorClass]"
-  ></my-component>
-</div>
-```
-
 :::
 
 :::snippet 绑定内联样式对象语法
+
+```html
+<!-- 结果渲染为 <div id="app-7" style="color:red;fontSize: 30px;" > </div> -->
+<div
+  id="app-7"
+  v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }"
+></div>
+```
 
 ```javascript
 let app7 = new Vue({
@@ -124,19 +132,16 @@ let app7 = new Vue({
 });
 ```
 
-```html
-<!-- 结果渲染为 <div id="app-7" style="color:red;fontSize: 30px;" > </div> -->
-<div
-  id="app-7"
-  v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }"
-></div>
-```
-
 :::
 
 :::snippet 绑定内联样式对象语法
 
 > `CSS`属性名可以用驼峰式 (`camelCase`) 或短横线分隔 (`kebab-case`，记得用引号括起来) 来命名
+
+```html
+<!-- 结果渲染为 <div id="app-8" style="color:red;fontSize: 30px;" > </div> -->
+<div id="app-8" v-bind:style="styleObject"></div>
+```
 
 ```javascript
 let app8 = new Vue({
@@ -150,14 +155,14 @@ let app8 = new Vue({
 });
 ```
 
-```html
-<!-- 结果渲染为 <div id="app-8" style="color:red;fontSize: 30px;" > </div> -->
-<div id="app-8" v-bind:style="styleObject"></div>
-```
-
 :::
 
 :::snippet 绑定内联样式数组语法
+
+```html
+<!-- 结果渲染为 <div id="app-9" style="color: red; width: 550px; font-size: 36px; border: 1px;"> </div> -->
+<div id="app-9" class="test" v-bind:style="[styleObject,mainObejct]"></div>
+```
 
 ```javascript
 let app9 = new Vue({
@@ -176,14 +181,26 @@ let app9 = new Vue({
 });
 ```
 
-```html
-<!-- 结果渲染为 <div id="app-9" style="color: red; width: 550px; font-size: 36px; border: 1px;"> </div> -->
-<div id="app-9" class="test" v-bind:style="[styleObject,mainObejct]"></div>
-```
-
 :::
 
 :::snippet 绑定内联样式组件上
+
+```html
+<div id="app-10">
+  <!-- 结果渲染为 <p  class="baz boo" style=" color:red;fontSize:36px;border:1px;"> 姓名：huang7000  年龄：18 </p> -->
+  <component-demo
+    class="baz boo"
+    id="components-demo"
+    v-bind:style="[styleObject,mainObejct]"
+  ></component-demo>
+  <!-- 结果渲染为 <p  class="baz boo" style=" color:blue;fontSize:25px;"> 姓名：huang7000  年龄：18 </p> -->
+  <component-demo
+    class="baz boo"
+    id="components-demo"
+    v-bind:style="{ color: colorValue, fontSize: fontSize + 'px' }"
+  ></component-demo>
+</div>
+```
 
 ```javascript
 Vue.component("component-demo", {
@@ -212,35 +229,18 @@ let app10 = new Vue({
 });
 ```
 
-```html
-<div id="app-10">
-  <!-- 结果渲染为 <p  class="baz boo" style=" color:red;fontSize:36px;border:1px;"> 姓名：huang7000  年龄：18 </p> -->
-  <component-demo
-    class="baz boo"
-    id="components-demo"
-    v-bind:style="[styleObject,mainObejct]"
-  ></component-demo>
-  <!-- 结果渲染为 <p  class="baz boo" style=" color:blue;fontSize:25px;"> 姓名：huang7000  年龄：18 </p> -->
-  <component-demo
-    class="baz boo"
-    id="components-demo"
-    v-bind:style="{ color: colorValue, fontSize: fontSize + 'px' }"
-  ></component-demo>
-</div>
-```
-
 :::
 
 :::snippet 自动添加前缀
 
-> 当`v-bind:style`使用需要添加浏览器引擎前缀的`CSS`属性时，如`transform`，`Vue.js`会自动侦测并添加相应的前缀。
+当`v-bind:style`使用需要添加浏览器引擎前缀的`CSS`属性时，如`transform`，`Vue.js`会自动侦测并添加相应的前缀。
 
 :::
 
 :::snippet 多重值
 
-> `style`绑定中的属性提供一个包含多个值的数组，常用于提供多个带前缀的值。
-> 只会渲染数组中最后一个被浏览器支持的值。
+1. `style`绑定中的属性提供一个包含多个值的数组，常用于提供多个带前缀的值。
+2. 只会渲染数组中最后一个被浏览器支持的值。
 
 ```html
 <div :style="{ display: ['-webkit-box', '-ms-flexbox', 'flex'] }"></div>
