--- a/src/notes/vuecourse/09.md
+++ b/src/notes/vuecourse/09.md
@@ -17,6 +17,13 @@
 
 :::snippet 文本
 
+```html
+<div id="example-1">
+  <input v-model="message" placeholder="edit me" />
+  <p>Message is: {{ message }}</p>
+</div>
+```
+
 ```javascript
 let example1 = new Vue({
   el: "#example-1",
@@ -26,26 +33,10 @@ let example1 = new Vue({
 });
 ```
 
-```html
-<div id="example-1">
-  <input v-model="message" placeholder="edit me" />
-  <p>Message is: {{ message }}</p>
-</div>
-```
-
 :::
 :::snippet 多行文本
 
 > 在文本区域插值 (`<textarea>{{text}}</textarea>`) 并不会生效，应用`v-model`来代替。
-
-```javascript
-let example2 = new Vue({
-  el: "#example-2",
-  data: {
-    message: "duohangwenben"
-  }
-});
-```
 
 ```html
 <div id="example-2">
@@ -56,24 +47,22 @@ let example2 = new Vue({
 </div>
 ```
 
-:::
-:::snippet 复选框
-
-1. 单个复选框，绑定到布尔值
-2. 多个复选框，绑定到同一个数组
-
-> `true-value`和 `false-value`特性并不会影响输入控件的`value`特性，因为浏览器在提交表单时并不会包含未被选中的复选框。<br/> 如果要确保表单中这两个值中的一个能够被提交，(比如`yes`或`no`)，请换用单选按钮。
-
 ```javascript
-let example3 = new Vue({
-  el: "#example-3",
+let example2 = new Vue({
+  el: "#example-2",
   data: {
-    checked: true,
-    checkedNames: ["Jack"],
-    toggle: "yes"
+    message: "duohangwenben"
   }
 });
 ```
+
+:::
+:::snippet 复选框
+
+1. 单个复选框，默认绑定到`Boolean`（也可以绑定`String`或者`Number`）
+2. 多个复选框，绑定到同一个数组
+
+> `true-value`和 `false-value`特性并不会影响输入控件的`value`特性，因为浏览器在提交表单时并不会包含未被选中的复选框。<br/> 如果要确保表单中这两个值中的一个能够被提交，(比如`yes`或`no`)，请换用单选按钮。
 
 ```html
 <div id="example-3">
@@ -106,21 +95,20 @@ let example3 = new Vue({
 </div>
 ```
 
-:::
-
-:::snippet 单选按钮
-
 ```javascript
-let example4 = new Vue({
-  el: "#example-4",
+let example3 = new Vue({
+  el: "#example-3",
   data: {
-    picked: "Two",
-    sex: "男人",
-    women: "女人",
-    men: "男人"
+    checked: true,
+    checkedNames: ["Jack"],
+    toggle: "yes"
   }
 });
 ```
+
+:::
+
+:::snippet 单选按钮
 
 ```html
 <div id="example-4">
@@ -142,6 +130,18 @@ let example4 = new Vue({
 </div>
 ```
 
+```javascript
+let example4 = new Vue({
+  el: "#example-4",
+  data: {
+    picked: "Two",
+    sex: "男人",
+    women: "女人",
+    men: "男人"
+  }
+});
+```
+
 :::
 
 :::snippet 选择框
@@ -153,6 +153,43 @@ let example4 = new Vue({
 > 如果`v-model`表达式的初始值未能匹配任何选项，`<select>`元素将被渲染为“未选中”状态。<br/>
 > 在`iOS`中，这会使用户无法选择第一个选项。因为这样的情况下，`iOS`不会触发`change`事件。<br/>
 > 因此，更推荐像上面这样提供一个值为空的禁用选项。
+
+```html
+<div id="example-5">
+  <select v-model="selected">
+    <option disabled value="">请选择</option>
+    <option>A</option>
+    <option>B</option>
+    <option>C</option>
+  </select>
+  <span>Selected: {{ selected }}</span>
+</div>
+<div id="example-6">
+  <select v-model="selected" multiple style="width: 50px;">
+    <option>A</option>
+    <option>B</option>
+    <option>C</option>
+  </select>
+  <br />
+  <span>Selected: {{ selected }}</span>
+</div>
+<div id="example-7">
+  <select v-model="selected">
+    <option v-for="option in options" v-bind:value="option.value">
+      {{ option.text }}
+    </option>
+  </select>
+  <span>Selected: {{ selected }}</span>
+</div>
+<div id="example-8">
+  <select v-model="selected">
+    <option v-for="option in options" v-bind:value="option">
+      {{ option.text }}
+    </option>
+  </select>
+  <span>Selected: {{ selected }}</span>
+</div>
+```
 
 ```javascript
 let example5 = new Vue({
@@ -212,43 +249,6 @@ let example8 = new Vue({
 });
 ```
 
-```html
-<div id="example-5">
-  <select v-model="selected">
-    <option disabled value="">请选择</option>
-    <option>A</option>
-    <option>B</option>
-    <option>C</option>
-  </select>
-  <span>Selected: {{ selected }}</span>
-</div>
-<div id="example-6">
-  <select v-model="selected" multiple style="width: 50px;">
-    <option>A</option>
-    <option>B</option>
-    <option>C</option>
-  </select>
-  <br />
-  <span>Selected: {{ selected }}</span>
-</div>
-<div id="example-7">
-  <select v-model="selected">
-    <option v-for="option in options" v-bind:value="option.value">
-      {{ option.text }}
-    </option>
-  </select>
-  <span>Selected: {{ selected }}</span>
-</div>
-<div id="example-8">
-  <select v-model="selected">
-    <option v-for="option in options" v-bind:value="option">
-      {{ option.text }}
-    </option>
-  </select>
-  <span>Selected: {{ selected }}</span>
-</div>
-```
-
 :::
 
 :::snippet 修饰符
@@ -256,17 +256,6 @@ let example8 = new Vue({
 1. `v-model`在每次`input`事件触发后将输入框的值与数据进行同步 。添加`lazy`修饰符，从而转变为使用`change`事件进行同步
 2. 想自动将用户的输入值转为数值类型，可以给`v-model`添加`number`修饰符
 3. 想自动过滤用户输入的首尾空白字符，可以给`v-model`添加`trim`修饰符
-
-```javascript
-let example9 = new Vue({
-  el: "#example-9",
-  data: {
-    message: "",
-    age: null,
-    msg: ""
-  }
-});
-```
 
 ```html
 <div id="example-9">
@@ -277,6 +266,17 @@ let example9 = new Vue({
   <input v-model.trim="msg" />
   <p>msg length: {{ msg.length }}</p>
 </div>
+```
+
+```javascript
+let example9 = new Vue({
+  el: "#example-9",
+  data: {
+    message: "",
+    age: null,
+    msg: ""
+  }
+});
 ```
 
 :::
