--- a/src/notes/vuecourse/10.md
+++ b/src/notes/vuecourse/10.md
@@ -1,8 +1,8 @@
 :::snippet 基本示例
 
-> 组件是可复用的`Vue`实例，所以它们与`new Vue`接收相同的选项，例如`data`、`computed`、`watch`、`methods`以及生命周期钩子等。仅有的例外是像`el`这样根实例特有的选项。<br>
-> 一个组件的`data`选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝<br>
-> 全局注册的`Vue.component('my-component-name', { ... options ...})`<br>
+1. 组件是可复用的`Vue`实例，所以它们与`new Vue`接收相同的选项，例如`data`、`computed`、`watch`、`methods`以及生命周期钩子等。仅有的例外是像`el`这样根实例特有的选项。<br>
+2. 一个组件的`data`选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝<br>
+3. 全局注册的`Vue.component('my-component-name', { ... options ...})`<br>
 
 ```javascript
 var buttonCounterData = {
@@ -12,21 +12,21 @@ var buttonCounterData = {
 Vue.component("button-counter", {
   // 一个组件的 data 选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝
   // 正确的写法
-  // data: function () {
-  //     return {
-  //         count: 0
-  //     };
-  // },
+  data: function () {
+      return {
+          count: 0
+      };
+  },
   // 正确的写法
   // data: function () {
   //     // // 这个才是返回对象的独立的拷贝
   //     return JSON.parse(JSON.stringify(buttonCounterData))
   // },
   // 错误的写法
-  data: function() {
-    // // 这个不是返回对象的独立的拷贝
-    return buttonCounterData;
-  },
+  // data: function() {
+  //   // // 这个不是返回对象的独立的拷贝
+  //   return buttonCounterData;
+  // },
   template:
     '<button v-on:click="count++">You clicked me {{ count }} times.</button>'
 });
@@ -47,6 +47,20 @@ let componentsDemo = new Vue({
 
 :::snippet 通过`Prop`向子组件传递数据
 
+```html
+<div id="blog-post-demo">
+  <blog-post title="My journey with Vue"></blog-post>
+  <blog-post title="Blogging with Vue"></blog-post>
+  <blog-post title="Why Vue is so fun"></blog-post>
+  <!-- 循环组件 -->
+  <blog-post
+    v-for="post in posts"
+    v-bind:key="post.id"
+    v-bind:title="post.title"
+  ></blog-post>
+</div>
+```
+
 ```javascript
 Vue.component("blog-post", {
   props: ["title"],
@@ -64,26 +78,22 @@ let blogPostDemo = new Vue({
 });
 ```
 
-```html
-<div id="blog-post-demo">
-  <blog-post title="My journey with Vue"></blog-post>
-  <blog-post title="Blogging with Vue"></blog-post>
-  <blog-post title="Why Vue is so fun"></blog-post>
-  <!-- 循环组件 -->
-  <blog-post
-    v-for="post in posts"
-    v-bind:key="post.id"
-    v-bind:title="post.title"
-  ></blog-post>
-</div>
-```
-
 :::
 
 :::snippet 单个根元素
 
 > 使用了`JavaScript`的模板字符串来让多行的模板更易读。<br>
 > 它们在`IE`下并没有被支持，所以如果你需要在不 (经过`Babel`或`TypeScript`之类的工具) 编译的情况下支持`IE`，请使用折行转义字符取而代之。
+
+```html
+<div id="blog-post-root-demo">
+  <blog-post
+    v-for="post in posts"
+    v-bind:key="post.id"
+    v-bind:post="post"
+  ></blog-post>
+</div>
+```
 
 ```javascript
 Vue.component("blog-post", {
@@ -119,22 +129,28 @@ let blogPostRootDemo = new Vue({
 });
 ```
 
-```html
-<div id="blog-post-root-demo">
-  <blog-post
-    v-for="post in posts"
-    v-bind:key="post.id"
-    v-bind:post="post"
-  ></blog-post>
-</div>
-```
-
 :::
 
 :::snippet 监听子组件事件
 
 1. 我们可以调用内建的`$emit`方法并传入事件的名字，来向父级组件触发一个事件：
 2. 使用`$emit`的第二个参数来提供这个值,在父级组件监听这个事件的时候，我们可以通过`$event`访问到被抛出的这个值
+
+```html
+<div id="blog-posts-events-demo" class="demo">
+  <blog-post-event
+    :style="{ fontSize: postFontSize + 'em',width: widthSize+'px', height: heightSize+'px',
+          background: colorValue}"
+    v-for="post in posts"
+    v-bind:key="post.id"
+    v-bind:post="post"
+    v-on:parent-font="postFontSize += 0.2;"
+    v-on:parent-style="widthSize += $event;"
+    v-on:parent-styles="widthSize += $event[0];heightSize += $event[1];"
+    v-on:parent-style-fun="parentStyleFun"
+  ></blog-post-event>
+</div>
+```
 
 ```javascript
 Vue.component("blog-post-event", {
@@ -192,25 +208,23 @@ let blogPostsEventsDemo = new Vue({
 });
 ```
 
-```html
-<div id="blog-posts-events-demo" class="demo">
-  <blog-post-event
-    :style="{ fontSize: postFontSize + 'em',width: widthSize+'px', height: heightSize+'px',
-          background: colorValue}"
-    v-for="post in posts"
-    v-bind:key="post.id"
-    v-bind:post="post"
-    v-on:parent-font="postFontSize += 0.2;"
-    v-on:parent-style="widthSize += $event;"
-    v-on:parent-styles="widthSize += $event[0];heightSize += $event[1];"
-    v-on:parent-style-fun="parentStyleFun"
-  ></blog-post-event>
-</div>
-```
-
 :::
 
 :::snippet 自定义事件也可以用于创建支持`v-model`的自定义输入组件
+
+```html
+<div id="custom-input-demo">
+  custom-input
+  <br />
+  <custom-input v-model="customText"></custom-input>
+  {{customText}}
+  <br />
+  input
+  <br />
+  <input v-model="searchText" />
+  {{searchText}}
+</div>
+```
 
 ```javascript
 Vue.component("custom-input", {
@@ -231,30 +245,16 @@ let customInputDemo = new Vue({
 });
 ```
 
-```html
-<div id="custom-input-demo">
-  custom-input
-  <br />
-  <custom-input v-model="customText"></custom-input>
-  {{customText}}
-  <br />
-  input
-  <br />
-  <input v-model="searchText" />
-  {{searchText}}
-</div>
-```
-
 :::
 
 :::snippet 通过插槽分发内容
 
-```css
-.demo-alert-box {
-  padding: 10px 20px;
-  background: #f3beb8;
-  border: 1px solid #f09898;
-}
+```html
+<div id="alert-box-demo">
+  <alert-box>
+    Something bad happened.
+  </alert-box>
+</div>
 ```
 
 ```javascript
@@ -271,39 +271,30 @@ let alertBoxDemo = new Vue({
 });
 ```
 
-```html
-<div id="alert-box-demo">
-  <alert-box>
-    Something bad happened.
-  </alert-box>
-</div>
+```css
+.demo-alert-box {
+  padding: 10px 20px;
+  background: #f3beb8;
+  border: 1px solid #f09898;
+}
 ```
 
 :::
 
 :::snippet 动态组件
 
-```css
-.tab-button {
-  padding: 6px 10px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  border: 1px solid #ccc;
-  cursor: pointer;
-  background: #f0f0f0;
-  margin-bottom: -1px;
-  margin-right: -1px;
-}
-.tab-button:hover {
-  background: #e0e0e0;
-}
-.tab-button.active {
-  background: #e0e0e0;
-}
-.tab {
-  border: 1px solid #ccc;
-  padding: 10px;
-}
+```html
+<div id="dynamic-component-demo">
+  <button
+    v-for="tab in tabs"
+    v-bind:key="tab"
+    v-bind:class="['tab-button', { active: currentTab === tab }]"
+    v-on:click="currentTab = tab"
+  >
+    {{ tab }}
+  </button>
+  <component v-bind:is="currentTabComponent" class="tab"></component>
+</div>
 ```
 
 ```javascript
@@ -330,18 +321,27 @@ let dynamicComponentDemo = new Vue({
 });
 ```
 
-```html
-<div id="dynamic-component-demo">
-  <button
-    v-for="tab in tabs"
-    v-bind:key="tab"
-    v-bind:class="['tab-button', { active: currentTab === tab }]"
-    v-on:click="currentTab = tab"
-  >
-    {{ tab }}
-  </button>
-  <component v-bind:is="currentTabComponent" class="tab"></component>
-</div>
+```css
+.tab-button {
+  padding: 6px 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background: #f0f0f0;
+  margin-bottom: -1px;
+  margin-right: -1px;
+}
+.tab-button:hover {
+  background: #e0e0e0;
+}
+.tab-button.active {
+  background: #e0e0e0;
+}
+.tab {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
 ```
 
 :::
@@ -352,7 +352,7 @@ let dynamicComponentDemo = new Vue({
 > 如果我们从以下来源使用模板的话，这条限制是不存在的：字符串 (例如：`template: '...'`)、单文件组件 (`.vue`)、`<script type="text/x-template">`
 
 ```html
-<div id="app09">
+<div id="component-row">
   错误
   <table>
     <blog-post-row></blog-post-row>
