--- a/src/notes/vuecourse/13.md
+++ b/src/notes/vuecourse/13.md
@@ -1,42 +1,85 @@
 :::snippet 事件名
 
-> 始终使用 kebab-case 的事件名。
-> 并且 v-on 事件监听器在 DOM 模板中会被自动转换为全小写 (因为 HTML 是大小写不敏感的)
+1. 不同于组件和 prop，事件名不存在任何自动化的大小写转换。而是触发的事件名需要完全匹配监听这个事件所用的名称。
+2. 并且 v-on 事件监听器在 DOM 模板中会被自动转换为全小写 (因为 HTML 是大小写不敏感的)，所以 v-on:myEvent 将会变成 v-on:myevent——导致 myEvent 不可能被监听到。
+
+> 推荐始终使用 kebab-case 的事件名。
 
 ```html
-<div id="app01">
-    <my-component
-        v-on:my-event="doSomething"
-        post-title="testHtml"
-        v-bind:test="test"
-    ></my-component>
+<h2>blog-post-a Dom:</h2>
+<div id="blog-post-dom">
+  <h4>my-component-a my-event 有效</h4>
+  <my-component-a v-on:my-event="doSomething" v-bind:test="test">
+  </my-component-a>
+  <h4>my-component-b myEvent 无效</h4>
+  <my-component-b
+    v-on:myEvent="doOtherthing"
+    v-bind:test="test"
+  ></my-component-b>
 </div>
+<h2>blog-post-a template:</h2>
+<div id="blog-post-template"></div>
 ```
 
 ```javascript
-Vue.component('my-component', {
-    // 在 JavaScript 中是 camelCase 的
-    props: ['test', 'PostTitle'],
-    template: `
-                <div class="blog-post">
-      <h3>{{ PostTitle }}</h3>
-      <h4>{{ test }}</h4>
+Vue.component("my-component-a", {
+  props: ["test"],
+  template: `
+      <div class="blog-post">
+      <h6>{{ test }}</h6>
       <button v-on:click="$emit('my-event')">
         Enlarge
       </button>
     </div>`
 });
-new Vue({
-    el: '#app01',
-    data: {
-        test: 'PostTitle'
+Vue.component("my-component-b", {
+  props: ["test"],
+  template: `
+      <div class="blog-post">
+      <h4>{{ test }}</h4>
+      <button v-on:click="$emit('myEvent')">
+        Enlarge
+      </button>
+    </div>`
+});
+let blogPostDom = new Vue({
+  el: "#blog-post-dom",
+  data: {
+    test: "dom"
+  },
+  methods: {
+    doSomething: function(event) {
+      this.test = this.test + "doSome";
+      console.log("输出事件");
     },
-    methods: {
-        doSomething: function(event) {
-            this.test = this.test + '1233';
-            console.log('输出事件');
-        }
+    doOtherthing: function(event) {
+      this.test = this.test + "doOther";
+      console.log("输出事件");
     }
+  }
+});
+let blogPostTemplate = new Vue({
+  el: "#blog-post-template",
+  data: {
+    test: "template"
+  },
+  methods: {
+    doSomething: function(event) {
+      this.test = this.test + "doSome";
+      console.log("输出事件");
+    },
+    doOtherthing: function(event) {
+      this.test = this.test + "doOther";
+      console.log("输出事件");
+    }
+  },
+  template: `
+        <div>
+            <h4>my-component-a  my-event 有效 </h4>
+            <my-component-a v-on:my-event="doSomething"  v-bind:test="test"></my-component-a>
+            <h4>my-component-b  myEvent 有效 </h4>
+            <my-component-b v-on:myEvent="doOtherthing"  v-bind:test="test"></my-component-b>
+        </div>`
 });
 ```
 
@@ -44,25 +87,25 @@ new Vue({
 
 :::snippet 自定义组件的 v-model
 
+> 一个组件上的 v-model 默认会利用名为 value 的 prop 和名为 input 的事件，但是像单选框、复选框等类型的输入控件可能会将 value 特性用于不同的目的。model 选项可以用来避免这样的冲突<br/>
 > 始终使用 kebab-case 的事件名。
-> 并且 v-on 事件监听器在 DOM 模板中会被自动转换为全小写 (因为 HTML 是大小写不敏感的)
 
 ```html
-<div id="app03">
-    <base-checkbox v-model="lovingVue"></base-checkbox>
+<div id="base-checkbox-demo">
+  <base-checkbox v-model="lovingVue"></base-checkbox>
 </div>
 ```
 
 ```javascript
-Vue.component('base-checkbox', {
-    model: {
-        prop: 'checked',
-        event: 'change'
-    },
-    props: {
-        checked: Boolean
-    },
-    template: `
+Vue.component("base-checkbox", {
+  model: {
+    prop: "checked",
+    event: "change"
+  },
+  props: {
+    checked: Boolean
+  },
+  template: `
     <input
       type="checkbox"
       v-bind:checked="checked"
@@ -70,12 +113,11 @@ Vue.component('base-checkbox', {
     >
   `
 });
-app03 = new Vue({
-    el: '#app03',
-    data: {
-        checked: true,
-        lovingVue: true
-    }
+let baseCheckboxDemo = new Vue({
+  el: "#base-checkbox-demo",
+  data: {
+    lovingVue: true
+  }
 });
 ```
 
@@ -83,40 +125,83 @@ app03 = new Vue({
 
 :::snippet 将原生事件绑定到组件
 
-> 一个组件的根元素上直接监听一个原生事件。使用 `v-on` 的 `.native` 修饰符
-> Vue 提供了一个 \$listeners 属性，它是一个对象，里面包含了作用在这个组件上的所有监听器。
+1. 一个组件的根元素上直接监听一个原生事件。
+2. 使用 `v-on` 的 `.native` 修饰符。
+3. 根元素实际上是一个 `<label>`:``父级的 .native 监听器将静默失败。它不会产生任何报错，但是 onFocus 处理函数不会如你预期地被调用。
 
 ```html
-<base-input v-on:focus.native="onFocus"></base-input>
-<div id="app05">
-    <base-input v-model="label" v-bind:label="label"></base-input>
+<div id="base-input-demo">
+  <base-input
+    v-model="label"
+    v-bind:label="label"
+    v-on:focus.native="onFocus"
+  ></base-input>
 </div>
 ```
 
 ```javascript
-Vue.component('base-input', {
-    inheritAttrs: false,
-    props: ['label', 'value'],
-    computed: {
-        inputListeners: function() {
-            var vm = this;
-            // `Object.assign` 将所有的对象合并为一个新对象
-            return Object.assign(
-                {},
-                // 我们从父级添加所有的监听器
-                this.$listeners,
-                // 然后我们添加自定义监听器，
-                // 或覆写一些监听器的行为
-                {
-                    // 这里确保组件配合 `v-model` 的工作
-                    input: function(event) {
-                        vm.$emit('input', event.target.value);
-                    }
-                }
-            );
-        }
+Vue.component("base-input", {
+  props: ["label", "value"],
+  template: `
+        <label>{{ label }}
+            <input
+            v-bind="$attrs"
+            v-bind:value="value"
+            v-on:input="$emit('input', $event.target.value)"
+            >
+        </label>
+        `
+});
+let baseInputDemo = new Vue({
+  el: "#base-input-demo",
+  data: {
+    label: "base-label",
+    value: ""
+  },
+  methods: {
+    onFocus() {
+      console.log("onFocus");
     },
-    template: `
+    input() {
+      console.log("input");
+    }
+  }
+});
+```
+
+Vue 提供了一个 \$listeners 属性，它是一个对象，里面包含了作用在这个组件上的所有监听器。
+
+```html
+<base-input v-on:focus.native="onFocus"></base-input>
+<div id="app05">
+  <base-input v-model="label" v-bind:label="label"></base-input>
+</div>
+```
+
+```javascript
+Vue.component("base-input", {
+  inheritAttrs: false,
+  props: ["label", "value"],
+  computed: {
+    inputListeners: function() {
+      var vm = this;
+      // `Object.assign` 将所有的对象合并为一个新对象
+      return Object.assign(
+        {},
+        // 我们从父级添加所有的监听器
+        this.$listeners,
+        // 然后我们添加自定义监听器，
+        // 或覆写一些监听器的行为
+        {
+          // 这里确保组件配合 `v-model` 的工作
+          input: function(event) {
+            vm.$emit("input", event.target.value);
+          }
+        }
+      );
+    }
+  },
+  template: `
     <label>
       {{ label }}
       <input
@@ -128,11 +213,11 @@ Vue.component('base-input', {
   `
 });
 new Vue({
-    el: '#app05',
-    data: {
-        label: '256',
-        value: ''
-    }
+  el: "#app05",
+  data: {
+    label: "256",
+    value: ""
+  }
 });
 ```
 
@@ -147,48 +232,48 @@ new Vue({
 
 ```html
 <text-document
-    v-bind:title="doc.title"
-    v-on:update:title="doc.title = $event"
+  v-bind:title="doc.title"
+  v-on:update:title="doc.title = $event"
 ></text-document>
 <text-document v-bind:title.sync="doc.title"></text-document>
 <div id="app08">
-    {{ doc.title }}
-    <base-document
-        v-bind:title="doc.title"
-        v-on:update:title="doc.title =$event"
-    ></base-document>
+  {{ doc.title }}
+  <base-document
+    v-bind:title="doc.title"
+    v-on:update:title="doc.title =$event"
+  ></base-document>
 </div>
 ```
 
 ```javascript
-Vue.component('base-document', {
-    // inheritAttrs: false,
-    model: {
-        prop: 'title',
-        event: 'input'
-    },
-    props: ['doc', 'value', 'title'],
-    computed: {
-        inputListeners: function() {
-            var vm = this;
-            // `Object.assign` 将所有的对象合并为一个新对象
-            return Object.assign(
-                {},
-                // 我们从父级添加所有的监听器
-                this.$listeners,
-                // 然后我们添加自定义监听器，
-                // 或覆写一些监听器的行为
-                {
-                    // 这里确保组件配合 `v-model` 的工作
-                    input: function(event) {
-                        //  vm.$emit('input', event.target.value);
-                        vm.$emit('update:title', event.target.value);
-                    }
-                }
-            );
+Vue.component("base-document", {
+  // inheritAttrs: false,
+  model: {
+    prop: "title",
+    event: "input"
+  },
+  props: ["doc", "value", "title"],
+  computed: {
+    inputListeners: function() {
+      var vm = this;
+      // `Object.assign` 将所有的对象合并为一个新对象
+      return Object.assign(
+        {},
+        // 我们从父级添加所有的监听器
+        this.$listeners,
+        // 然后我们添加自定义监听器，
+        // 或覆写一些监听器的行为
+        {
+          // 这里确保组件配合 `v-model` 的工作
+          input: function(event) {
+            //  vm.$emit('input', event.target.value);
+            vm.$emit("update:title", event.target.value);
+          }
         }
-    },
-    template: `
+      );
+    }
+  },
+  template: `
                     <div style="color:blue">
                                  <h2> {{title}}</h2>
                                <input  v-bind="$attrs"
@@ -197,13 +282,13 @@ Vue.component('base-document', {
                       </div>`
 });
 app08 = new Vue({
-    el: '#app08',
-    data: {
-        doc: {
-            title: 'text-document'
-        },
-        value: ''
-    }
+  el: "#app08",
+  data: {
+    doc: {
+      title: "text-document"
+    },
+    value: ""
+  }
 });
 ```
 
