--- a/src/notes/vuecourse/16.md
+++ b/src/notes/vuecourse/16.md
@@ -1,97 +1,66 @@
-:::snippet 插槽内容
+:::snippet 访问根实例
 
-> `<navigation-link>` 没有包含一个 `<slot>` 元素，则任何传入它的内容都会被抛弃
+1. 在每个 new Vue 实例的子组件中，其根实例可以通过 $root 属性进行访问。 
+2. 所有的子组件都可以将这个实例作为一个全局 store 来访问或使用。
+
+> 对于 demo 或非常小型的有少量组件的应用来说这是很方便的。<br>
+> 在绝大多数情况下，强烈推荐使用 Vuex 来管理应用的状态。
 
 ```html
-<div id="app01">
-    <navigation-link url="/profile">
-        <span class="fa fa-user">ceshi </span>
-        Your Profile {{ username }}
-    </navigation-link>
+<div id="app">
+  <my-component> </my-component>
 </div>
 ```
 
 ```javascript
-Vue.component('navigation-link', {
-    props: ['url'],
-    template: ` <a v-bind:herf="url" class="nav-link">
-                            <slot></slot>
-                </a>`
-});
-app01 = new Vue({
-    el: '#app01',
-    data: {
-        url: '',
-        username: '用户名'
+Vue.component("my-component", {
+  template: `
+            <div class="blog-post">
+                <button @click="handleClose()">点击</button>
+            </div>`,
+  methods: {
+    handleClose() {
+      // 获取根组件的数据
+      console.log(this.$root.foo);
+      // 写入根组件的数据
+      this.$root.foo = 2;
+      console.log(this.$root.foo);
+      // 访问根组件的计算属性
+      console.log(this.$root.bar);
+      // 调用根组件的方法
+      console.log(this.$root.baz());
     }
+  }
+});
+// Vue 根实例
+new Vue({
+  el: "#app",
+  data: {
+    foo: 1
+  },
+  computed: {
+    bar: function() {
+      return this.foo + "bar";
+    }
+  },
+  methods: {
+    baz: function() {
+      this.foo++;
+      return this.foo + "baz";
+    }
+  }
 });
 ```
 
 :::
 
-:::snippet 具名插槽
+:::snippet 访问父级组件实例
 
-> `<slot>` 元素有一个特殊的特性：name。这个特性可以用来定义额外的插槽：
-> 在向具名插槽提供内容的时候，我们可以在一个父组件的 `<template>` 元素上使用 slot 特性
-> 另一种 `slot` 特性的用法是直接用在一个普通的元素上
-> 组件模板里的 `<slot>` 标签内部指定默认的内容来做到插槽的默认内容。
-> 父组件模板的所有东西都会在父级作用域内编译；子组件模板的所有东西都会在子级作用域内编译。
+1. 和 $root 类似，$parent 属性可以用来从一个子组件访问父组件的实例。
+2. 它提供了一种机会，可以在后期随时触达父级组件，以替代将数据以 prop 的方式传入子组件的方式。
 
-```html
-<div id="app02">
-    <base-layout>
-        <template slot="header">
-            <h1>Here might be a page title</h1>
-        </template>
-        <p>test内容1</p>
-        <template slot="main">
-            <p>main内容</p>
-        </template>
-        <p>test内容2</p>
-        <template slot="footer">
-            <p>Here's some contact info</p>
-        </template>
-    </base-layout>
-
-    <base-layout>
-        <h2 slot="header">Here might be a page title</h2>
-        <p>test内容1</p>
-        <p slot="main">main内容</p>
-        <p>test内容2</p>
-        <!-- <p slot="footer">Here's some contact info</p> -->
-    </base-layout>
-</div>
-```
-
-```javascript
-Vue.component('base-layout', {
-    template: `
-                    <div class="container">
-  <header>
-    <slot name="header">页头</slot>
-  </header>
-  <main>
-    <slot name="main">内容</slot>
-  </main>
-  <template>
-    <slot ></slot>
-  </template>
-  <footer>
-    <slot name="footer">页脚</slot>
-  </footer>
-</div>
-                    `
-});
-app02 = new Vue({
-    el: '#app02',
-    data: {
-        header: '开头',
-        maintest:
-            '达瓦大无多军哇多爱我的娃大王卡的进口量达我觉得的AWK的我的看完打开 爱我的骄傲未打卡我、‘ 、答案为了 ',
-        footer: '结束'
-    }
-});
-```
+> 在绝大多数情况下，触达父级组件会使得你的应用更难调试和理解，尤其是当你变更了父级组件的数据的时候。当我们稍后回看那个组件的时候，很难找出那个变更是从哪里发起的。<br>
+> 我们针对需要向任意更深层级的组件提供上下文信息时推荐依赖注入的原因。
 
 :::
 
@@ -102,26 +71,26 @@ app02 = new Vue({
 
 ```html
 <div id="app03">
-    <todo-list v-bind:todos="todos">
-        <template slot-scope="slotProps">
-            <span v-if="slotProps.todo.isComplete">√</span>
-            {{ slotProps.todo.text }}
-        </template>
-    </todo-list>
-    <hr />
-    <todo-list v-bind:todos="todos">
-        <template slot-scope="{ todo }">
-            <span v-if="todo.isComplete">✓</span>
-            {{ todo.text }}
-        </template>
-    </todo-list>
+  <todo-list v-bind:todos="todos">
+    <template slot-scope="slotProps">
+      <span v-if="slotProps.todo.isComplete">√</span>
+      {{ slotProps.todo.text }}
+    </template>
+  </todo-list>
+  <hr />
+  <todo-list v-bind:todos="todos">
+    <template slot-scope="{ todo }">
+      <span v-if="todo.isComplete">✓</span>
+      {{ todo.text }}
+    </template>
+  </todo-list>
 </div>
 ```
 
 ```javascript
-Vue.component('todo-list', {
-    props: ['todos'],
-    template: `
+Vue.component("todo-list", {
+  props: ["todos"],
+  template: `
                     <ul>
                     <li  v-for="todo in todos" v-bind:key="todo.id">
                     <slot v-bind:todo="todo">
@@ -132,16 +101,16 @@ Vue.component('todo-list', {
                     `
 });
 app03 = new Vue({
-    el: '#app03',
-    data: {
-        todos: [
-            { id: 1, text: '小白', isComplete: true },
-            { id: 2, text: '小强', isComplete: true },
-            { id: 3, text: '小明', isComplete: false },
-            { id: 4, text: '咪咪', isComplete: true },
-            { id: 5, text: '妹妹', isComplete: false }
-        ]
-    }
+  el: "#app03",
+  data: {
+    todos: [
+      { id: 1, text: "小白", isComplete: true },
+      { id: 2, text: "小强", isComplete: true },
+      { id: 3, text: "小明", isComplete: false },
+      { id: 4, text: "咪咪", isComplete: true },
+      { id: 5, text: "妹妹", isComplete: false }
+    ]
+  }
 });
 ```
 
